5개 포스트 시니어급 심화 (Redis Cluster/Lock, Kafka Internals/Consumer, Spring TX)
- redis-cluster-sentinel: SDOWN/ODOWN, Gossip, MOVED/ASK, Lettuce topology refresh (634→1192줄)
- redis-distributed-lock: Redlock 수학, Watchdog HashedWheelTimer, Fencing Token (453→1203줄)
- kafka-internals: RecordBatch 와이어 포맷, Purgatory TimingWheel, KRaft Raft (623→1481줄)
- kafka-consumer-deep: Group Protocol 3단계, Poll/Heartbeat 분리, Burrow 모니터링 (555→1166줄)
- spring-transaction: CGLIB 프록시 체인, 전파속성 7개 WHY, MVCC Read View, Saga/TCC (530→1490줄)

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>