@@ -1,5 +1,5 @@
 ---
-title: "Redis 분산 락 원리부터 Redlock까지"
+title: "Redis 분산 락 완전 분석 — SETNX 원자성부터 Redlock 논쟁까지"
 categories:
 - REDIS
 toc: true
@@ -7,135 +7,168 @@ toc_sticky: true
 toc_label: 목차
 ---
 
-쿠팡 블랙프라이데이 자정, 한정판 운동화 1켤레에 5만 명이 동시 접속한다. 서버 20대가 동시에 "재고 1개 남음"을 확인하고 저마다 결제를 진행한다면? 재고는 1개인데 20명에게 팔리는 참사가 벌어진다. 분산 락은 "지금 이 자원은 내가 쓰고 있으니 기다려라"는 신호를 20대 서버 전체에 동시에 전달하는 메커니즘이다.
+쿠팡 블랙프라이데이 자정, 한정판 운동화 1켤레에 5만 명이 동시에 달려든다. 서버 20대가 저마다 "재고 1개 남음"을 읽고 결제를 진행하면, 재고는 1개인데 20명에게 팔리는 참사가 벌어진다. `synchronized`는 JVM 안에서만 유효하다. 20대 서버가 공유하는 자원을 보호하려면 **분산 락**이 필요하다.
 
-단일 서버라면 `synchronized`로 해결된다. 하지만 서버가 20대라면 JVM 락은 서버 안에서만 유효하다. 20대가 동시에 같은 재고를 잡는다. 이 문제를 해결하는 것이 **분산 락**이다.
+이 글은 "Redis 분산 락을 왜 그렇게 구현하는가"라는 질문에 집중한다. SETNX와 EXPIRE를 왜 분리하면 안 되는지, Lua 스크립트가 어떻게 원자성을 보장하는지, Redisson의 Watchdog이 왜 정확히 10초마다 갱신하는지, Martin Kleppmann이 Redlock을 왜 비판했는지를 내부 메커니즘 수준으로 파헤친다.
 
 ---
 
-## 1. 분산 락이란?
+## 1. 분산 락이란 — 왜 필요한가
 
-> **비유**: 분산 락은 공중화장실 문 걸쇠와 같다. 걸쇠(락)를 건 사람만 안에 있을 수 있고, 나올 때 반드시 열어줘야(해제) 다음 사람이 들어갈 수 있다. Redis라는 건물 관리인이 걸쇠 상태를 모든 서버에게 공개적으로 알려준다.
+> **비유**: 분산 락은 은행 금고 열쇠다. 열쇠를 가진 직원(서버)만 금고(공유 자원)에 들어갈 수 있고, 나올 때 열쇠를 반납해야 다음 직원이 들어갈 수 있다. 열쇠 보관소(Redis)는 모든 지점에서 접근 가능하다.
 
-여러 서버(프로세스)가 **동일한 공유 자원**에 동시에 접근할 때, 오직 하나의 프로세스만 자원을 점유하도록 보장하는 메커니즘이다.
+단일 서버 환경에서는 `ReentrantLock`이나 `synchronized`로 충분하다. 문제는 **수평 확장(Scale-Out)**이다. 서버 인스턴스 10대가 같은 재고 테이블을 읽으면, 각 JVM 락은 자신의 프로세스 안에서만 유효하므로 10대가 동시에 같은 레코드를 잡는다.
 
-단일 서버에서는 `synchronized`, `ReentrantLock` 등으로 해결되지만, **멀티 인스턴스 환경**에서는 JVM 밖의 외부 저장소가 필요하다. Redis가 가장 널리 쓰인다.
+외부 저장소 기반의 분산 락이 필요한 이유다. Redis가 선택받는 이유는 세 가지다.
 
-### 전체 아키텍처 흐름
+| 특성 | 이유 |
+|------|------|
+| **싱글 스레드 이벤트 루프** | 명령어 실행이 순차적이므로 Redis 자체에서 race condition이 없다 |
+| **원자적 복합 명령어** | `SET NX EX`, `EVAL`(Lua)로 "읽기-검사-쓰기"를 한 명령으로 처리 |
+| **TTL 기본 지원** | 락 보유자가 죽어도 TTL 만료로 자동 해제 — 데드락 방지 |
+| **Pub/Sub** | 락 해제 시 구독자에게 즉시 push — 스핀락 불필요 |
 
 ```mermaid
-sequenceDiagram
-    서버1->>Redis: SET NX EX
-    Redis-->>서버1: OK 락 획득
-    서버2->>Redis: SET NX EX
-    Redis-->>서버2: FAIL 대기
-    서버1->>Redis: Lua DEL 해제
+graph LR
+    S1["서버1 SET NX"] -->|OK 락획득| R["Redis"]
+    S2["서버2 SET NX"] -->|FAIL 대기| R
+    S1 -->|Lua DEL| R
+    R -->|PUBLISH| S2
 ```
-
-### 왜 Redis인가?
-
-| 특성 | 설명 |
-|------|------|
-| **싱글 스레드** | 명령어가 순차 실행되므로 race condition 없음 |
-| **원자적 명령어** | `SET NX`, `EVAL`(Lua) 등으로 atomic한 락 획득 가능 |
-| **TTL 지원** | 락에 만료 시간을 설정하여 데드락 방지 |
-| **고성능** | 인메모리 기반으로 지연시간이 매우 낮음 |
-| **Pub/Sub** | 락 해제 이벤트를 구독자에게 즉시 전달 가능 |
 
 ---
 
-## 2. 기본 구현: SET NX EX
+## 2. SETNX + EXPIRE의 치명적 race condition
 
-Redis 분산 락의 핵심 명령어다.
+Redis 분산 락의 첫 번째 함정은 "SETNX를 먼저, EXPIRE를 나중에" 패턴이다.
+
+### 왜 분리하면 안 되는가
+
+```java
+// 절대 하지 말 것: 두 명령어가 원자적이지 않다
+redisTemplate.opsForValue().setIfAbsent(lockKey, lockValue); // SETNX
+redisTemplate.expire(lockKey, 30, TimeUnit.SECONDS);          // EXPIRE
+```
+
+이 코드에는 두 명령어 사이에 **시간 간격**이 존재한다. Redis는 싱글 스레드지만 클라이언트 측의 시간 간격은 제어할 수 없다. 다음 시나리오가 발생한다.
+
+```
+t=0: 서버 A → SETNX lock_key "uuid-A" → 성공 (TTL 없음)
+t=1: 서버 A 프로세스 크래시! (EXPIRE를 보내기 전에)
+t=2: lock_key는 TTL 없이 Redis에 영구 존재 → 데드락
+t=∞: 어떤 서버도 이 락을 획득하지 못함
+```
+
+SETNX 성공 직후 프로세스가 죽으면 TTL 없는 키가 영구 잔류한다. 서비스 전체가 해당 자원에 접근 불가가 된다.
+
+### SET NX EX — 원자적 해법
+
+Redis 2.6.12부터 `SET` 명령어에 옵션이 통합됐다.
 
 ```bash
 SET resource_lock <unique_value> NX EX 30
 ```
 
-- `NX` : 키가 존재하지 않을 때만 설정 (Not eXists)
-- `EX 30` : 30초 후 자동 만료
-- `unique_value` : UUID 등 고유값 — **본인이 건 락만 해제**하기 위함
+이 명령어는 **Redis 서버에서 단일 명령으로 처리**된다. Redis의 싱글 스레드 이벤트 루프는 이 명령어 하나를 처리하는 동안 다른 어떤 명령도 끼어들 수 없다. "키 존재 여부 확인 + 값 설정 + TTL 설정"이 하나의 원자적 단위다.
 
-### 락 획득 ~ 해제 전체 흐름
-
-```mermaid
-graph LR
-    C["Client"] -->|NX EX| R["Redis"]
-    C -->|UPDATE| DB["DB"]
-    C -->|Lua DEL| R
-```
-
-### 락 획득 코드
+왜 이게 원자적인가? Redis는 epoll/kqueue 기반 이벤트 루프에서 **명령어 파싱 → 실행 → 응답 전송**을 단일 스레드로 처리한다. `SET NX EX`는 하나의 명령어이므로 파싱부터 실행까지 인터럽트가 없다. SETNX와 EXPIRE가 두 줄이면 각각 독립된 이벤트가 되어 그 사이에 다른 클라이언트 명령이 실행될 수 있다.
 
 ```java
-String lockKey = "order:lock:" + orderId;
-String lockValue = UUID.randomUUID().toString();
-
+// 올바른 방법: SET NX EX = 원자적 하나의 명령
 Boolean acquired = redisTemplate.opsForValue()
     .setIfAbsent(lockKey, lockValue, 30, TimeUnit.SECONDS);
+// Spring Data Redis는 내부적으로 SET key value NX EX 30 을 보낸다
+```
 
-if (Boolean.TRUE.equals(acquired)) {
-    try {
-        // 임계 영역 로직
-        processOrder(orderId);
-    } finally {
-        // 반드시 Lua로 해제
-        releaseLock(lockKey, lockValue);
-    }
+---
+
+## 3. Lua 스크립트 원자성 — 왜 GET+DEL을 분리하면 안 되는가
+
+락을 해제할 때도 같은 원자성 문제가 있다.
+
+### 해제 시 race condition
+
+```java
+// 잘못된 해제 코드
+String value = redisTemplate.opsForValue().get(lockKey);  // GET
+if (lockValue.equals(value)) {
+    redisTemplate.delete(lockKey);  // DEL
 }
 ```
 
-### 락 해제 — 반드시 Lua 스크립트로
+GET과 DEL 사이에 다른 서버가 끼어들 수 있다.
+
+```
+t=0: 서버 A → GET lock_key → "uuid-A" (내 값 맞음)
+t=1: 서버 A의 락 TTL 만료 (GC pause로 코드 실행이 멈춰있었음)
+t=2: 서버 B → SET NX EX → 성공, lock_key = "uuid-B"
+t=3: 서버 A 깨어남 → DEL lock_key → 서버 B의 락을 삭제!
+t=4: 서버 C → SET NX EX → 성공, 두 서버가 동시에 임계 구역 진입
+```
+
+### Lua 스크립트 — Redis의 원자적 스크립팅
+
+Redis는 Lua 인터프리터를 내장하고 있다. EVAL 명령으로 실행되는 Lua 스크립트는 **Redis 이벤트 루프에서 단일 명령처럼 처리**된다. 스크립트 실행 도중 다른 클라이언트의 명령은 실행되지 않는다.
+
+왜 Lua가 원자적인가? Redis 소스 코드(`scripting.c`)를 보면 `EVAL` 명령의 핸들러는 Lua 스크립트를 완전히 실행한 뒤에야 다음 이벤트 루프 사이클로 넘어간다. 이것이 Redis 문서가 "scripts are atomic with respect to the rest of Redis"라고 명시하는 이유다.
 
 ```java
-private void releaseLock(String key, String value) {
-    String script =
+// 올바른 해제: Lua로 GET + 비교 + DEL을 원자적으로
+private static final String RELEASE_SCRIPT =
+    "if redis.call('get', KEYS[1]) == ARGV[1] then " +
+    "  return redis.call('del', KEYS[1]) " +
+    "else " +
+    "  return 0 " +
+    "end";
+
+public boolean releaseLock(String lockKey, String lockValue) {
+    Long result = redisTemplate.execute(
+        new DefaultRedisScript<>(RELEASE_SCRIPT, Long.class),
+        List.of(lockKey),
+        lockValue
+    );
+    return Long.valueOf(1L).equals(result);
+}
+```
+
+### EVALSHA — Lua 스크립트 캐싱
+
+`EVAL`은 매번 스크립트 전문을 Redis로 전송한다. `EVALSHA`는 스크립트의 SHA1 해시만 전송하고, Redis가 캐시에서 찾아 실행한다. 네트워크 전송량을 줄이고 파싱 오버헤드를 제거한다.
+
+Spring Data Redis의 `DefaultRedisScript`는 내부적으로 이를 자동 처리한다. 처음 실행 시 `SCRIPT LOAD`로 스크립트를 Redis에 등록하고 SHA1을 받은 뒤, 이후 호출은 `EVALSHA`로 SHA1만 전송한다. 스크립트가 캐시에 없으면(`NOSCRIPT` 에러) 자동으로 `EVAL`로 폴백한다.
+
+```java
+// DefaultRedisScript 내부 동작 원리
+// 1. SCRIPT LOAD "if redis.call('get'..." → SHA1: "a1b2c3..."
+// 2. 이후: EVALSHA a1b2c3 1 lockKey lockValue
+// 3. NOSCRIPT 에러 시: 자동으로 EVAL 재실행
+DefaultRedisScript<Long> script = new DefaultRedisScript<>();
+script.setScriptText(RELEASE_SCRIPT);
+script.setResultType(Long.class);
+// Spring이 내부적으로 EVALSHA/EVAL 전환 처리
+```
+
+---
+
+## 4. RedisTemplate 기반 완전 구현
+
+```java
+@Component
+@RequiredArgsConstructor
+public class RedisDistributedLock {
+
+    private final StringRedisTemplate redisTemplate;
+
+    private static final String RELEASE_SCRIPT =
         "if redis.call('get', KEYS[1]) == ARGV[1] then " +
         "  return redis.call('del', KEYS[1]) " +
         "else " +
         "  return 0 " +
         "end";
-    redisTemplate.execute(
-        new DefaultRedisScript<>(script, Long.class),
-        List.of(key), value
-    );
-}
-```
-
-**왜 Lua인가?**
-
-`GET` → 비교 → `DEL`을 별도로 수행하면, GET과 DEL 사이에 다른 프로세스가 끼어들 수 있다. Lua 스크립트는 Redis에서 **원자적으로** 실행된다.
-
-> **비유**: GET으로 "내 열쇠 맞나 확인" 하고 DEL로 "열쇠 반납" 하는 사이에, 다른 사람이 새 열쇠를 걸어버리면 남의 열쇠를 빼앗게 된다. Lua는 확인과 반납을 하나의 동작으로 묶어준다.
-
-```mermaid
-graph LR
-    A["비원자"] -->|"GET→DEL 사이 위험"| X["타인 락 삭제"]
-    B["Lua 원자"] -->|"GET+비교+DEL 한번에"| O["안전"]
-```
-
----
-
-## 3. Lettuce 기반 완전 구현
-
-Spring Boot 기본 Redis 클라이언트인 **Lettuce**를 사용한 직접 구현 방식이다.
-
-```java
-@Component
-public class LettuceDistributedLock {
-
-    private final StringRedisTemplate redisTemplate;
-
-    public LettuceDistributedLock(StringRedisTemplate redisTemplate) {
-        this.redisTemplate = redisTemplate;
-    }
 
     /**
-     * Step 1: 락 획득 시도
-     * @param lockKey   락 키 (예: "order:lock:42")
-     * @param lockValue 고유 식별자 (UUID 권장)
-     * @param ttlSeconds TTL (초) — 반드시 설정
-     * @return 락 획득 성공 여부
+     * 락 획득 시도 (단순 1회)
+     * 내부적으로 SET lockKey lockValue NX EX ttlSeconds 전송
      */
     public boolean tryLock(String lockKey, String lockValue, long ttlSeconds) {
         Boolean result = redisTemplate.opsForValue()
@@ -144,19 +177,12 @@ public class LettuceDistributedLock {
     }
 
     /**
-     * Step 2: 락 해제 — Lua 스크립트로 원자 실행
-     * GET → 값 비교 → DEL 을 하나의 명령으로 처리
+     * 락 해제 — Lua 스크립트로 GET+비교+DEL을 원자적으로 실행
+     * 자신이 건 락만 삭제하므로 타인 락 오삭제 불가
      */
     public boolean releaseLock(String lockKey, String lockValue) {
-        String script =
-            "if redis.call('get', KEYS[1]) == ARGV[1] then " +
-            "  return redis.call('del', KEYS[1]) " +
-            "else " +
-            "  return 0 " +
-            "end";
-
         Long result = redisTemplate.execute(
-            new DefaultRedisScript<>(script, Long.class),
+            new DefaultRedisScript<>(RELEASE_SCRIPT, Long.class),
             List.of(lockKey),
             lockValue
         );
@@ -164,94 +190,90 @@ public class LettuceDistributedLock {
     }
 
     /**
-     * Step 3: 스핀락 방식 재시도 (Lettuce는 Pub/Sub 미지원)
-     * @param waitMillis 최대 대기 시간 (ms)
+     * 스핀락 방식 재시도
+     * Lettuce는 Pub/Sub 구독 없이 폴링만 가능 — 고부하 시 Redis 타격
      */
     public boolean tryLockWithRetry(String lockKey, String lockValue,
                                      long ttlSeconds, long waitMillis)
             throws InterruptedException {
         long deadline = System.currentTimeMillis() + waitMillis;
-
         while (System.currentTimeMillis() < deadline) {
             if (tryLock(lockKey, lockValue, ttlSeconds)) {
                 return true;
             }
-            // 100ms 대기 후 재시도 — 락 해제 이벤트를 즉시 감지 못하는 단점
-            Thread.sleep(100);
+            Thread.sleep(100); // 100ms 폴링 간격 — 해제 감지까지 최대 100ms 지연
         }
         return false;
     }
 }
 ```
 
-### 사용 예시
-
 ```java
 @Service
-public class OrderService {
+@RequiredArgsConstructor
+public class StockService {
 
-    private final LettuceDistributedLock lock;
+    private final RedisDistributedLock lock;
+    private final StockRepository stockRepository;
 
-    public void processOrder(Long orderId) {
-        String lockKey  = "order:lock:" + orderId;
-        String lockValue = UUID.randomUUID().toString();
+    public void decreaseStock(Long productId, int amount) {
+        String lockKey   = "stock:lock:" + productId;
+        String lockValue = UUID.randomUUID().toString(); // 내 락 식별용 UUID
 
-        boolean acquired = lock.tryLock(lockKey, lockValue, 30);
-        if (!acquired) {
-            throw new LockAcquisitionException("락 획득 실패: " + orderId);
+        if (!lock.tryLock(lockKey, lockValue, 30)) {
+            throw new LockAcquisitionException("재고 락 획득 실패: " + productId);
         }
-
         try {
-            doProcess(orderId);
+            // DB 레벨 방어: WHERE quantity >= amount 조건 필수
+            int updated = stockRepository.decreaseStock(productId, amount);
+            if (updated == 0) {
+                throw new InsufficientStockException("재고 부족");
+            }
         } finally {
-            lock.releaseLock(lockKey, lockValue);
+            lock.releaseLock(lockKey, lockValue); // Lua로 안전하게 해제
         }
     }
 }
 ```
 
-### Lettuce 스핀락의 문제점
+### 스핀락의 근본적 문제
 
-```mermaid
-sequenceDiagram
-    loop 100ms마다 반복
-    ThreadB->>Redis: SET NX
-    Redis-->>ThreadB: FAIL
-    end
-    Note over Redis: ThreadA가 unlock
-    ThreadB->>Redis: SET NX
-    Redis-->>ThreadB: OK 락 획득
-```
-
-- 불필요한 Redis 명령어 반복 실행 → Redis 부하
-- 락 해제 이벤트를 즉시 감지 못해 최대 100ms 추가 지연
-- 경쟁 스레드가 많을수록 Redis에 부하 집중
-
-이 문제를 Redisson은 Pub/Sub으로 해결한다.
+스핀락은 락이 해제되는 **정확한 시점을 모른다**. 100ms마다 물어봐야 한다. 경쟁 스레드가 100개면 초당 1000번의 `SET NX` 명령이 Redis로 쏟아진다. 락 해제 시점과 다음 폴링 사이에 최대 100ms 지연이 생긴다. Redisson은 Pub/Sub으로 이 문제를 근본적으로 해결한다.
 
 ---
 
-## 4. Redisson 분산 락
+## 5. Redisson — Pub/Sub 기반 락 대기
 
-**Redisson**은 Redis 기반 Java 클라이언트로, 다양한 분산 동기화 프리미티브를 제공한다. 실무에서는 직접 구현보다 Redisson을 쓰는 것이 안전하다.
+Redisson의 핵심 차별점은 락을 기다리는 방법이다.
 
-### 의존성 추가
+### 왜 Pub/Sub이 스핀락보다 우월한가
+
+TCP 소켓은 전이중(full-duplex)이다. 클라이언트가 데이터를 보내지 않아도 서버가 먼저 데이터를 보낼 수 있다. Redis의 `SUBSCRIBE` 명령을 보내면 클라이언트 TCP 소켓은 "구독 모드"가 된다. 이 소켓은 OS의 `epoll_wait`에 등록되어 데이터가 올 때까지 CPU를 전혀 사용하지 않는다. Redis가 `PUBLISH`를 보내면 OS가 소켓에 데이터가 왔음을 감지하고 대기 중인 스레드를 깨운다.
+
+```
+스핀락:  [SET NX]→[FAIL]→[sleep 100ms]→[SET NX]→[FAIL]→... (CPU + 네트워크 낭비)
+Pub/Sub: [SUBSCRIBE]→epoll_wait(CPU 0%)→[락 해제 PUBLISH 수신]→즉시 재시도
+```
+
+Redisson 내부 채널명은 `redisson_lock__channel:{lockKey}`다. 락 보유자가 unlock을 호출하면 이 채널에 `PUBLISH`하고, 대기 중인 모든 클라이언트가 즉시 깨어나 `SET NX`를 재시도한다.
+
+```mermaid
+graph LR
+    A["서버A LOCK"] -->|획득성공| R["Redis"]
+    B["서버B tryLock"] -->|실패→SUBSCRIBE| R
+    A -->|unlock→PUBLISH| R
+    R -->|채널이벤트| B
+```
+
+### Redisson 설정 및 기본 사용
 
 ```xml
-<!-- Maven -->
 <dependency>
     <groupId>org.redisson</groupId>
     <artifactId>redisson-spring-boot-starter</artifactId>
     <version>3.27.0</version>
 </dependency>
 ```
-
-```gradle
-// Gradle
-implementation 'org.redisson:redisson-spring-boot-starter:3.27.0'
-```
-
-### 기본 설정
 
 ```java
 @Configuration
@@ -262,964 +284,37 @@ public class RedissonConfig {
         Config config = new Config();
         config.useSingleServer()
             .setAddress("redis://localhost:6379")
-            .setConnectionMinimumIdleSize(1)
+            .setConnectionMinimumIdleSize(2)
             .setConnectionPoolSize(10);
+        // Watchdog TTL: 기본 30초, 실무에서는 10~20초 권장
+        config.setLockWatchdogTimeout(30000);
         return Redisson.create(config);
     }
 }
 ```
 
-### RLock — 기본 분산 락
-
-```java
-RLock lock = redissonClient.getLock("order:lock:" + orderId);
-
-try {
-    // waitTime: 락 대기 최대 시간, leaseTime: 락 보유 최대 시간
-    boolean acquired = lock.tryLock(10, 30, TimeUnit.SECONDS);
-    if (acquired) {
-        processOrder(orderId);
-    }
-} finally {
-    if (lock.isHeldByCurrentThread()) {
-        lock.unlock();
-    }
-}
-```
-
-**leaseTime을 생략하면 Watchdog이 자동으로 TTL을 연장한다.**
-
-```java
-// leaseTime 생략 → Watchdog 활성화 (기본 30초마다 갱신)
-lock.lock(); // 무기한 보유, Watchdog이 TTL 연장
-```
-
----
-
-## 5. Redisson Pub/Sub 기반 대기
-
-Redisson의 가장 큰 장점은 락 대기 방식이다. 스핀락이 아닌 Pub/Sub 이벤트로 대기한다.
-
-**왜 Pub/Sub이 효율적인가 — TCP 동작 원리**:
-
-Redis Pub/Sub은 **TCP 커넥션 위에서 동작**한다. SUBSCRIBE 명령을 보내면 클라이언트는 해당 TCP 커넥션을 "구독 모드"로 전환한다. 이 상태에서는:
-
-1. **클라이언트 → Redis**: 추가 요청 안 보냄 (TCP 커넥션은 열려있지만 데이터 전송 없음)
-2. **Redis → 클라이언트**: PUBLISH가 발생하면 Redis가 **해당 TCP 커넥션으로 push** (서버가 먼저 보냄)
-3. **OS 레벨**: 클라이언트 스레드는 `epoll_wait`/`select`로 TCP 소켓의 읽기 이벤트를 대기 → **CPU 사용 0%**
-
-반면 스핀락은:
-1. 100ms마다 `SET NX` 명령을 TCP로 보냄 → Redis가 응답 → 실패면 다시 100ms 후 전송
-2. 스레드 10개가 경쟁하면 초당 100건의 TCP 요청-응답 왕복
-3. 락 해제 시점과 다음 폴링 사이 최대 100ms 지연
-
-```
-스핀락: [요청]→[응답]→[sleep]→[요청]→[응답]→... (CPU + 네트워크 낭비)
-Pub/Sub: [SUBSCRIBE]→ ... 대기(CPU 0%) ... →[PUBLISH 수신] (즉시 반응)
-```
-
-즉 Pub/Sub은 **TCP의 전이중(Full-duplex) 특성**을 활용한다. 하나의 TCP 커넥션에서 클라이언트가 데이터를 안 보내도 서버가 먼저 보낼 수 있다. 이것이 WebSocket과 같은 원리이며, HTTP 폴링과 근본적으로 다른 이유다.
-
-```mermaid
-sequenceDiagram
-    ThreadA->>Redis: SET NX EX 락 획득
-    ThreadB->>Redis: tryLock → FAIL
-    ThreadB->>Redis: SUBSCRIBE 대기
-    ThreadA->>Redis: unlock _ PUBLISH
-    Redis-->>ThreadB: 이벤트 수신 → 락 획득
-```
-
-**스핀락 vs Pub/Sub 비교:**
-
-| 항목 | Lettuce (스핀락) | Redisson (Pub/Sub) |
-|------|----------------|-------------------|
-| 락 해제 감지 | 최대 100ms 지연 | 즉시 |
-| 대기 중 Redis 명령 | 반복 발생 | 없음 |
-| 경쟁 스레드 증가 시 | Redis 부하 증가 | 부하 일정 |
-| 내부 채널 | - | `redisson_lock__channel:{lockKey}` |
-
----
-
-## 6. Watchdog — TTL 자동 연장
-
-Redisson은 leaseTime을 지정하지 않으면 **Watchdog**을 통해 락 TTL을 자동으로 연장한다.
-
-```mermaid
-sequenceDiagram
-    App->>Redis: lock
-    App->>Redis: unlock
-```
-
-**Watchdog 동작 원리:**
-- 기본 TTL: 30초 (`lockWatchdogTimeout`)
-- TTL의 1/3 시점마다 갱신 → 즉, 10초마다 30초로 리셋
-- 락 해제(`unlock()`) 시 Watchdog 자동 중단
-
-```java
-// Watchdog 활성화 (leaseTime 없음)
-lock.lock();
-lock.tryLock(10, TimeUnit.SECONDS); // waitTime만 지정
-
-// Watchdog 비활성화 (leaseTime 명시)
-lock.tryLock(10, 30, TimeUnit.SECONDS); // 30초 후 강제 해제
-
-// Watchdog 타임아웃 커스터마이즈
-Config config = new Config();
-config.setLockWatchdogTimeout(60000); // 60초
-```
-
-**주의:** leaseTime을 명시적으로 설정하면 Watchdog이 비활성화된다.
-
-### 분산 락 자체의 한계 — Watchdog 유무와 무관
-
-아래 문제들은 **Watchdog의 단점이 아니라 분산 락 자체의 한계**입니다. leaseTime을 명시해도 동일하게 발생하며, 오히려 leaseTime 방식이 더 위험한 경우도 있습니다.
-
-| 시나리오 | Watchdog 사용 시 | leaseTime 명시 시 | 더 위험한 쪽 |
-|---------|----------------|-----------------|------------|
-| GC STW 30초 | 다른 프로세스 30초 대기 | **락 만료 → 이중 진입** | leaseTime |
-| 네트워크 파티션 | 교착 (대기) | **락 만료 → 이중 진입** | leaseTime |
-| 마스터 장애 | 이중 락 | 이중 락 | **동일** |
-| 프로세스 죽음 | 30초 후 해제 | 10초 후 해제 | Watchdog (느림) |
-| 프로세스 느림 (15초) | **안전 (TTL 연장)** | 이중 진입 | leaseTime |
-| unlock() 누락 | **영구 락** | TTL 후 해제 | Watchdog |
-
-**Watchdog만의 고유 위험은 "unlock() 누락 시 영구 락" 하나**뿐입니다. 나머지는 분산 락 자체의 한계이며, Watchdog이 오히려 "프로세스 느림" 시나리오에서 이중 진입을 방지합니다.
-
-**시나리오 1: GC STW — 락 보유자가 멈춰도 Watchdog은 갱신**
-
-```java
-// 서버 A: 재고 차감 중 Full GC 발생
-lock.lock(); // Watchdog 활성화
-try {
-    int stock = stockRepository.findById(productId); // stock = 1
-    // ← 여기서 Full GC 30초 발생. 코드 멈춤.
-    // ← 하지만 Watchdog 스레드는 GC 대상이 아니라 TTL 계속 갱신!
-    // ← 서버 B는 락 획득 불가 → 30초간 대기
-    stockRepository.update(productId, stock - 1); // GC 끝나고 실행
-} finally {
-    lock.unlock();
-}
-// 결과: 서버 B는 30초간 불필요하게 블로킹됨
-// leaseTime=5초였다면? GC 중 락 만료 → B가 처리 → A가 깨어나서 덮어씀 (더 위험)
-```
-
-**시나리오 2: unlock() 누락 — 영구 락**
-
-```java
-// 잘못된 코드: 예외 시 unlock 안 됨
-lock.lock(); // Watchdog 활성화
-Order order = orderService.create(request); // ← RuntimeException 발생!
-lock.unlock(); // 여기 도달 못함 → Watchdog이 영원히 갱신 → 영구 락
-
-// 올바른 코드: try-finally 필수
-lock.lock();
-try {
-    Order order = orderService.create(request);
-} finally {
-    if (lock.isHeldByCurrentThread()) {
-        lock.unlock();
-    }
-}
-```
-
-**시나리오 3: 마스터 장애 — 이중 락**
-
-```java
-// t=0: 서버 A가 마스터에서 락 획득 + Watchdog 갱신 중
-// t=1: 마스터 죽음. 레플리카가 승격. 레플리카에는 락 키가 복제 안 됨
-// t=2: 서버 B가 새 마스터(구 레플리카)에서 같은 키로 락 획득 성공!
-// t=3: 서버 A와 B 둘 다 락을 보유 → 재고 동시 차감 → 오버셀링
-
-// 방어: Redlock (5개 독립 Redis에서 과반 획득) 또는 펜싱 토큰
-RLock lock1 = redisson1.getLock("stock:" + productId);
-RLock lock2 = redisson2.getLock("stock:" + productId);
-RLock lock3 = redisson3.getLock("stock:" + productId);
-RedissonRedLock redLock = new RedissonRedLock(lock1, lock2, lock3);
-redLock.lock(); // 3개 중 2개 이상 성공해야 락 획득
-```
-
-**시나리오 4: 네트워크 파티션 — 교착**
-
-```java
-lock.lock(); // 앱↔Redis 정상, Watchdog 갱신 정상
-try {
-    // 앱↔DB 네트워크 끊김
-    stockRepository.update(productId, newStock);
-    // ← DB 타임아웃 30초 대기 중
-    // ← Watchdog은 Redis에 TTL 계속 갱신 중
-    // ← 다른 서버들은 락 획득 불가 → 전부 대기
-    // 결과: DB 타임아웃 + 락 보유 = 서비스 전체 정지
-} finally {
-    lock.unlock();
-}
-
-// 방어: 작업 자체에 타임아웃 설정
-CompletableFuture.supplyAsync(() -> stockRepository.update(productId, newStock))
-    .get(5, TimeUnit.SECONDS); // 5초 안에 안 끝나면 포기
-```
-
-### 어떤 분산 락도 완벽하지 않다 — 최종 방어선이 필수
-
-Redis 분산 락, DB Named Lock, Zookeeper 락 **전부 깨질 수 있습니다**. 네트워크 파티션, GC STW, 마스터 장애 등 어떤 상황에서든 이중 락이 발생할 가능성이 있습니다. 따라서 **락은 성능 최적화(동시 요청 직렬화)일 뿐, 데이터 정합성의 최종 보장 수단이 아닙니다**.
-
-**최종 방어선: DB 레벨 제약**
-
-```java
-// 1. 비관적 락 — SELECT FOR UPDATE (최종 방어선)
-@Query("SELECT s FROM Stock s WHERE s.productId = :id")
-@Lock(LockModeType.PESSIMISTIC_WRITE)
-Stock findByIdForUpdate(@Param("id") Long id);
-
-// 2. 낙관적 락 — @Version (충돌 감지)
-@Entity
-public class Stock {
-    @Version
-    private Long version; // UPDATE 시 version 불일치면 OptimisticLockException
-    private int quantity;
-}
-
-// 3. UNIQUE 제약 — 멱등성 보장 (이중 결제 방지)
-// payment_idempotency_keys 테이블에 UNIQUE(idempotency_key)
-// 같은 키로 두 번 INSERT 시도 → DuplicateKeyException → 두 번째 무시
-
-// 4. WHERE 조건 방어 — 음수 재고 방지
-@Modifying
-@Query("UPDATE Stock SET quantity = quantity - :amount WHERE id = :id AND quantity >= :amount")
-int decreaseStock(@Param("id") Long id, @Param("amount") int amount);
-// 영향받은 행 0이면 재고 부족 → 비즈니스 예외
-```
-
-**실무 아키텍처: 락 + 최종 방어선 조합**
-
-```
-[요청] → [Redis 분산 락: 동시 요청 직렬화] → [비즈니스 로직]
-                                               ↓
-                                        [DB WHERE 방어: quantity >= amount]
-                                               ↓
-                                        [UNIQUE 제약: 이중 처리 방지]
-```
-
-- **Redis 락**: 99.9%의 동시 요청을 직렬화해서 DB 부하를 줄이는 **성능 최적화**
-- **DB WHERE 방어**: 락이 깨져도 음수 재고가 절대 안 생기는 **정합성 보장**
-- **UNIQUE 제약**: 이중 결제/이중 주문이 절대 안 생기는 **멱등성 보장**
-
-> **핵심**: "분산 락만 걸면 안전하다"는 착각이 가장 위험하다. 락은 트래픽 보호막이고, **데이터 정합성은 DB가 최종 보장**해야 한다.
-
-### MySQL Named Lock도 완벽하지 않다
-
-| 문제 | 상황 | 결과 |
-|------|------|------|
-| 커넥션 풀 고갈 | Named Lock은 별도 커넥션이 필요 — 락 보유 중 커넥션 반납 불가 | 동시 락 100개 = 커넥션 100개 점유 |
-| 타임아웃 무한 대기 | `GET_LOCK('key', -1)`로 무한 대기 설정 시 | 데드락과 같은 효과 |
-| 트랜잭션과 무관 | Named Lock은 DB 트랜잭션과 별개 — 트랜잭션 롤백해도 락은 유지 | unlock 누락 시 영구 락 |
-| 단일 DB 의존 | Redis와 달리 DB가 SPOF | DB 장애 = 락 시스템 전체 중단 |
-| 성능 한계 | 락 획득마다 DB 왕복 (수 ms) | Redis (~0.5ms) 대비 5~10배 느림 |
-
-```java
-// Named Lock 위험한 사용
-@Transactional
-public void process(Long id) {
-    jdbc.execute("SELECT GET_LOCK('stock:' + id, 10)");
-    // 비즈니스 로직...
-    // ← 여기서 예외 발생하면?
-    // @Transactional은 롤백하지만 Named Lock은 해제 안 됨!
-    jdbc.execute("SELECT RELEASE_LOCK('stock:' + id)");
-}
-
-// 안전한 사용: 별도 커넥션 + try-finally
-public void processSafe(Long id) {
-    DataSource lockDs = separateLockDataSource; // 락 전용 커넥션 풀
-    Connection conn = lockDs.getConnection();
-    try {
-        conn.createStatement().execute("SELECT GET_LOCK('stock:" + id + "', 5)");
-        try {
-            businessService.doWork(id); // @Transactional은 여기서
-        } finally {
-            conn.createStatement().execute("SELECT RELEASE_LOCK('stock:" + id + "')");
-        }
-    } finally {
-        conn.close(); // 락 전용 커넥션 반납
-    }
-}
-```
-
-<details>
-<summary><b>Named Lock 위험 시나리오 전체 (클릭해서 펼치기)</b></summary>
-
-**시나리오 1: 커넥션 풀 고갈**
-
-```java
-// Named Lock은 락 보유 중 커넥션을 반납할 수 없다
-// HikariCP 기본 10개 커넥션 → 동시 락 10개면 풀 고갈
-@Service
-public class StockService {
-    @Autowired private JdbcTemplate jdbc;
-
-    public void decrease(Long id) {
-        jdbc.execute("SELECT GET_LOCK('stock:" + id + "', 10)");
-        // ← 이 커넥션은 RELEASE_LOCK까지 반납 불가
-        // ← 동시에 11번째 요청이 오면 커넥션 대기 → 타임아웃 → 서비스 장애
-
-        stockRepository.decreaseStock(id); // 이것도 커넥션 필요 → 같은 풀에서 가져감
-
-        jdbc.execute("SELECT RELEASE_LOCK('stock:" + id + "')");
-    }
-}
-// 결과: 락 커넥션 10개 + 비즈니스 커넥션 10개 = 20개 필요
-// HikariCP 10개 → 데드락! (락 잡은 스레드가 비즈니스 커넥션을 기다리고,
-//                           비즈니스 커넥션은 락 커넥션이 반납될 때까지 안 나옴)
-
-// 해결: 락 전용 DataSource 분리
-@Bean("lockDataSource")
-public DataSource lockDataSource() {
-    HikariConfig config = new HikariConfig();
-    config.setMaximumPoolSize(20); // 락 전용 풀
-    config.setPoolName("lock-pool");
-    return new HikariDataSource(config);
-}
-```
-
-**시나리오 2: 트랜잭션 롤백해도 락 유지**
-
-```java
-@Transactional
-public void riskyProcess(Long id) {
-    jdbc.execute("SELECT GET_LOCK('stock:" + id + "', 5)");
-
-    stockRepository.decrease(id);
-    paymentService.charge(orderId); // ← RuntimeException 발생!
-
-    // @Transactional이 롤백 → DB 변경은 취소됨
-    // BUT Named Lock은 트랜잭션과 무관 → 락은 그대로 유지!
-    // 이 커넥션이 풀로 반환되면? 락이 자동 해제됨 (커넥션 종료 시)
-    // 그런데 커넥션 풀은 커넥션을 종료하지 않고 재사용함!
-    // → 다른 스레드가 이 커넥션을 받으면 이전 락이 붙어있음
-
-    jdbc.execute("SELECT RELEASE_LOCK('stock:" + id + "')"); // 도달 못함
-}
-
-// 해결: try-finally + 별도 커넥션
-public void safeProcess(Long id) {
-    Connection lockConn = lockDataSource.getConnection();
-    try {
-        lockConn.createStatement().execute("SELECT GET_LOCK('stock:" + id + "', 5)");
-        try {
-            transactionalService.doBusinessLogic(id); // 별도 @Transactional
-        } finally {
-            lockConn.createStatement().execute("SELECT RELEASE_LOCK('stock:" + id + "')");
-        }
-    } finally {
-        lockConn.close(); // 락 커넥션 명시적 반환
-    }
-}
-```
-
-**시나리오 3: 동일 커넥션에서 중복 GET_LOCK**
-
-```java
-// MySQL Named Lock은 같은 커넥션에서 같은 이름으로 GET_LOCK 하면 즉시 성공
-// → 재진입 가능하지만, 다른 이름의 락을 잡으면 이전 락이 해제됨! (MySQL 5.7 미만)
-
-// MySQL 5.7 미만:
-conn.execute("SELECT GET_LOCK('lock_A', 5)"); // lock_A 획득
-conn.execute("SELECT GET_LOCK('lock_B', 5)"); // lock_B 획득, lock_A 자동 해제!
-// lock_A를 보유 중이라 생각하지만 실제로는 해제됨 → 다른 스레드가 lock_A 획득
-
-// MySQL 5.7+: 여러 Named Lock 동시 보유 가능 (수정됨)
-// 하지만 RELEASE_LOCK을 각각 호출해야 함
-```
-
-**시나리오 4: DB 장애 = 락 시스템 전체 중단**
-
-```java
-// Named Lock은 DB에 의존 → DB 장애 시 락 획득 불가
-// Redis 분산 락은 Redis 장애 시에도 Fail-open(허용) 정책 가능
-// Named Lock은 Fail-open이 불가능 — DB 없이 GET_LOCK을 할 수 없으므로
-
-// DB 이중화(Master-Slave)를 해도:
-// - Named Lock은 Master에서만 동작
-// - Master 장애 → Slave 승격 → 기존 Named Lock 전부 유실
-// - Redis 마스터 장애와 동일한 이중 락 문제 발생
-```
-
-**시나리오 5: 성능 — DB 왕복 비용**
-
-```java
-// Named Lock: GET_LOCK + RELEASE_LOCK = DB 왕복 2회
-// 각 왕복 2~5ms (같은 AZ) / 10~30ms (다른 AZ)
-// 초당 1000건 처리 시: 2000~5000ms의 DB 시간 소모
-
-// Redis: SET NX + DEL = Redis 왕복 2회
-// 각 왕복 0.1~0.5ms
-// 초당 1000건: 200~1000ms
-
-// 비교:
-// Named Lock: ~3ms × 1000 = 3초/초 (DB 부하)
-// Redis Lock: ~0.3ms × 1000 = 0.3초/초 (10배 빠름)
-```
-
-</details>
-
-> **Named Lock도 최종 방어선 필요**: Redis든 Named Lock이든, 락이 깨지는 상황은 반드시 존재한다. **DB 제약(WHERE, UNIQUE, VERSION)**이 마지막 보루다.
-
-**실무 권장 설정**:
-
-```java
-// 1. Watchdog 대신 leaseTime 명시 (대부분의 경우 이게 안전)
-lock.tryLock(3, 10, TimeUnit.SECONDS); // 3초 대기, 10초 후 자동 해제
-
-// 2. Watchdog 쓸 때는 반드시 try-finally로 unlock 보장
-lock.lock();
-try {
-    doWork();
-} finally {
-    if (lock.isHeldByCurrentThread()) {
-        lock.unlock(); // Watchdog 자동 중단
-    }
-}
-
-// 3. Watchdog 타임아웃을 짧게 (기본 30초 → 10초)
-config.setLockWatchdogTimeout(10000);
-```
-
-> **핵심**: Watchdog은 "작업 시간을 예측할 수 없을 때"만 사용하고, 예측 가능하면 **leaseTime을 명시**하는 게 안전하다. Watchdog에 맡기면 편하지만, 위 5가지 위험을 감수해야 한다.
-
----
-
-## 7. Redisson 락 종류
-
-### FairLock — 공정 락
-
-락 획득 순서를 **요청 순서대로** 보장한다. 내부적으로 대기 큐를 Redis에 저장한다.
-
-```java
-RLock fairLock = redissonClient.getFairLock("fairLock:resource");
-
-try {
-    // 먼저 요청한 스레드가 먼저 락을 획득 (starvation 방지)
-    fairLock.lock();
-    doWork();
-} finally {
-    fairLock.unlock();
-}
-```
-
-```mermaid
-graph LR
-    T1 --> T2 --> T3
-    T1 -->|순서대로| L["Lock"]
-```
-
-**단점:** 일반 RLock보다 오버헤드가 크고, 처리량이 낮다.
-
----
-
-### MultiLock — 복수 락 동시 획득
-
-여러 자원에 대한 락을 **하나의 원자적 연산처럼** 획득한다.
-
-```java
-RLock lock1 = redissonClient.getLock("lock:accountA"); // 출금 계좌
-RLock lock2 = redissonClient.getLock("lock:accountB"); // 입금 계좌
-
-RLock multiLock = redissonClient.getMultiLock(lock1, lock2);
-
-try {
-    // Step 1. 두 락을 모두 획득해야 진행
-    multiLock.lock();
-    // Step 2. 계좌 이체 처리 (데드락 없음)
-    transfer(accountA, accountB, amount);
-} finally {
-    // Step 3. 두 락 동시 해제
-    multiLock.unlock();
-}
-```
-
-**내부 동작:**
-1. 모든 락을 순서대로 획득 시도
-2. 하나라도 실패하면 이미 획득한 락을 모두 해제 후 재시도
-3. 데드락 방지를 위해 랜덤 백오프 적용
-
-**사용 사례:** 계좌 이체 시 출금 계좌 + 입금 계좌 동시 락킹.
-
----
-
-### ReadWriteLock — 읽기/쓰기 락
-
-여러 스레드의 **동시 읽기를 허용**하고, 쓰기는 배타적으로 처리한다.
-
-```java
-RReadWriteLock rwLock = redissonClient.getReadWriteLock("rw:resource");
-
-// Step 1. 읽기 락 — 여러 스레드 동시 획득 가능
-RLock readLock = rwLock.readLock();
-readLock.lock();
-try {
-    return readData();
-} finally {
-    readLock.unlock();
-}
-
-// Step 2. 쓰기 락 — 배타적 (다른 읽기/쓰기 없을 때만 획득)
-RLock writeLock = rwLock.writeLock();
-writeLock.lock();
-try {
-    writeData();
-} finally {
-    writeLock.unlock();
-}
-```
-
-**동작 규칙:**
-
-| 요청 \ 현재 상태 | 읽기 락 보유 | 쓰기 락 보유 |
-|-----------------|------------|------------|
-| 읽기 락 요청 | 허용 (동시 가능) | 대기 |
-| 쓰기 락 요청 | 대기 | 대기 |
-
----
-
-### Semaphore — 허용 개수 제한
-
-동시에 접근 가능한 **스레드 수를 제한**한다.
-
-```java
-RSemaphore semaphore = redissonClient.getSemaphore("semaphore:api");
-semaphore.trySetPermits(10); // Step 1. 최대 10개 퍼밋 설정
-
-// Step 2. 퍼밋 획득 (최대 5초 대기)
-boolean acquired = semaphore.tryAcquire(1, 5, TimeUnit.SECONDS);
-try {
-    callExternalApi(); // Step 3. 동시 최대 10개만 실행
-} finally {
-    semaphore.release(); // Step 4. 퍼밋 반납
-}
-```
-
-**사용 사례:** 외부 API 동시 호출 수 제한, DB 커넥션 풀 제어.
-
----
-
-### CountDownLatch — 완료 대기
-
-여러 작업이 **모두 완료될 때까지 대기**하는 분산 카운터다.
-
-```java
-RCountDownLatch latch = redissonClient.getCountDownLatch("latch:batch");
-latch.trySetCount(3); // Step 1. 3개 작업 완료 대기
-
-// Step 2. 워커 1, 2, 3 각각 완료 시 호출
-latch.countDown();
-
-// Step 3. 오케스트레이터 — 3개 모두 완료 시까지 블로킹
-latch.await();
-```
-
----
-
-## 8. Lettuce vs Redisson 비교
-
-| 항목 | Lettuce (직접 구현) | Redisson |
-|------|-------------------|----------|
-| **설정 복잡도** | 낮음 (Spring Boot 기본) | 중간 (추가 의존성) |
-| **락 대기 방식** | 스핀락 (폴링) | Pub/Sub (이벤트) |
-| **Watchdog** | 없음 (직접 구현 필요) | 내장 자동화 |
-| **재진입 지원** | 없음 (직접 구현 필요) | 기본 지원 |
-| **락 종류** | SET NX 단일 | RLock, FairLock, MultiLock, RedLock, RW, Semaphore, Latch |
-| **Redis 부하** | 스핀락 시 높음 | 이벤트 기반으로 낮음 |
-| **TTL 연장** | 직접 구현 필요 | Watchdog 자동 처리 |
-| **Redlock** | 직접 구현 필요 | 내장 (`getRedLock`) |
-| **코드량** | 많음 | 적음 |
-| **적합 환경** | 단순한 락, 최소 의존성 | 복잡한 동기화, 프로덕션 |
-
-> **실무 예시**: 배달의민족 주문 처리 서버가 10대 운영 중이다. 사용자가 주문 버튼을 두 번 눌렀을 때, 두 요청이 서로 다른 서버에 도달해도 Redisson 락 하나로 "첫 번째 요청만 처리"를 보장한다.
-
----
-
-## 9. Redlock 알고리즘
-
-단일 Redis 인스턴스에 의존하면, 그 노드가 죽으면 락도 사라진다. **Redlock**은 Redis 창시자 Antirez가 제안한 다중 노드 분산 알고리즘이다.
-
-### 동작 방식
-
-1. **N개(보통 5개)의 독립 Redis 마스터**를 준비한다
-2. 클라이언트가 **모든 노드에 동시에** 락 획득을 시도한다
-3. **과반수(N/2 + 1) 이상** 성공하고, 총 소요 시간이 TTL보다 짧으면 락 획득 성공
-4. 실패 시 모든 노드에서 락을 해제한다
-
-```mermaid
-graph LR
-    C["클라이언트"] -->|SET NX PX| R1["Redis1~5"]
-    R1 --> CHECK{"과반수 충족?"}
-    CHECK -->|성공+TTL내| OK["락 획득"]
-    CHECK -->|미달/초과| FAIL["실패·전체해제"]
-```
-
-```
-Redlock 알고리즘 의사코드:
-1. 현재 시각 T1 기록
-2. N개 Redis 마스터에 동시에 SET NX PX ttl 시도
-3. N/2 + 1 이상 성공하고, 총 소요 시간 < TTL 이면 락 획득 성공
-4. 유효 TTL = 초기 TTL - (현재시각 - T1) - 클럭 드리프트 보정값
-5. 실패 시 모든 노드에서 락 해제
-```
-
-> **비유**: 국회 의결처럼, 5명 중 3명 이상이 찬성해야 법안이 통과된다. 한 명이 결석해도 나머지 4명이 동의하면 유효하다.
-
-### Redisson으로 Redlock 구현
-
-```java
-RLock lock1 = redissonClient1.getLock("redlock:key"); // Redis #1
-RLock lock2 = redissonClient2.getLock("redlock:key"); // Redis #2
-RLock lock3 = redissonClient3.getLock("redlock:key"); // Redis #3
-RLock lock4 = redissonClient4.getLock("redlock:key"); // Redis #4
-RLock lock5 = redissonClient5.getLock("redlock:key"); // Redis #5
-
-RLock redLock = redissonClient1.getRedLock(lock1, lock2, lock3, lock4, lock5);
-
-try {
-    boolean acquired = redLock.tryLock(10, 30, TimeUnit.SECONDS);
-    if (acquired) {
-        doCriticalWork();
-    }
-} finally {
-    redLock.unlock();
-}
-```
-
-### Redlock 논쟁
-
-Martin Kleppmann(DDIA 저자)은 Redlock의 안전성에 의문을 제기했다:
-
-- **GC pause**: 락 획득 후 긴 GC가 발생하면, TTL이 만료되어 다른 프로세스가 락을 획득할 수 있다
-- **시계 점프**: NTP 동기화로 시스템 시계가 갑자기 뛰면 TTL 계산이 틀어진다
-
-이에 대해 Antirez는 반박했지만, **완벽한 합의에는 이르지 못했다.**
-
-**결론**: 완벽한 분산 합의가 필요하면 ZooKeeper/etcd 같은 CP 시스템 사용.
-
----
-
-
-## 극한 시나리오
-
-### 시나리오 1: 락 보유 중 프로세스 크래시
-
-**상황**: 서버 A가 락을 잡고 주문 처리 중에 갑자기 OOM으로 프로세스가 죽었다.
-
-```mermaid
-sequenceDiagram
-    ProcessA->>Redis: SET NX EX 30
-    Redis-->>ProcessA: OK
-    Note over ProcessA: 크래시 (OOM)
-    Note over Redis: TTL 30초 만료
-    ProcessB->>Redis: SET NX EX 30
-    Redis-->>ProcessB: OK 락 획득
-```
-
-**해결**: TTL이 자동으로 만료시킨다. **TTL이 없으면 영원히 데드락**이다. TTL은 반드시 설정해야 한다.
-
----
-
-### 시나리오 2: 작업이 TTL보다 오래 걸림
-
-**상황**: 쿠팡 대용량 주문 처리 중 외부 결제 API가 응답을 늦게 줬다. 락 TTL은 30초였는데 작업이 35초 걸렸다.
-
-```mermaid
-sequenceDiagram
-    A->>Redis: SET NX EX 락 획득
-    Note over Redis: 30초 후 TTL 만료
-    B->>Redis: SET NX EX → OK 락 획득
-    A->>Redis: DEL Lua 없이
-    Note right of Redis: B의 락이 삭제됨!
-```
-
-**해결 1**: Lua 스크립트로 `value` 비교 후 삭제 (UUID 확인 후 DEL)
-
-**해결 2**: Watchdog으로 TTL 자동 연장 (Redisson)
-
-**해결 3**: 작업 시작 전 남은 TTL 확인
-
-```java
-Long ttl = redisTemplate.getExpire(lockKey, TimeUnit.MILLISECONDS);
-if (ttl != null && ttl < MINIMUM_WORK_TIME_MS) {
-    throw new LockExpiredException("락 TTL 부족, 작업 포기");
-}
-```
-
----
-
-### 시나리오 3: Redis 마스터 장애 + Failover
-
-**상황**: 락을 저장한 Redis 마스터가 갑자기 죽었다. Sentinel이 레플리카를 마스터로 승격시켰다. 그 사이 서버 B가 새 마스터에서 락을 획득했다.
-
-```mermaid
-sequenceDiagram
-    A->>Master: SET NX → OK 락 획득
-    Note over Master: Master 크래시!
-    Note over Master: Replica가 Master로 승격
-    B->>Master: SET NX → OK 이중 락!
-```
-
-**원인**: Redis 복제는 **비동기**이므로, 마스터가 죽기 전에 복제되지 않은 데이터는 유실된다.
-
-**해결 1**: Redlock 사용 (과반수 기반 — 단일 노드 장애에 내성)
-
-**해결 2**: `WAIT` 명령어로 동기 복제 강제 (성능 저하 감수)
-
-```java
-// 락 획득 후 복제 확인
-redisTemplate.execute((RedisCallback<Long>) conn ->
-    conn.wait(1, 100)); // 레플리카 1개 이상, 100ms 내 동기화 확인
-```
-
-**해결 3**: ZooKeeper/etcd 같은 CP 시스템 사용
-
----
-
-### 시나리오 4: 네트워크 파티션 + Fencing Token
-
-**상황**: 서버 A는 락을 보유하고 작업 중이지만, Redis와 통신이 끊겼다. Watchdog이 TTL을 연장하지 못해 락이 만료됐다. 서버 B가 락을 획득했다.
-
-```mermaid
-sequenceDiagram
-    A->>Redis: 락 보유 중
-    Note over A,Redis: 네트워크 단절!
-    Note over Redis: TTL 만료 → 락 해제
-    B->>Redis: SET NX → OK 락 획득
-    A->>DB: 작업 계속 락 없는 줄 모름
-    B->>DB: 작업 시작
-    Note over DB: A, B 동시 접근!
-```
-
-**해결: Fencing Token 패턴**
-
-A는 작업 시작 전 **fencing token**(단조 증가 번호)을 발급받는다. 공유 자원(DB 등)은 fencing token이 현재보다 큰 경우에만 쓰기를 허용한다.
-
-```mermaid
-sequenceDiagram
-    B->>DB: 쓰기 token=34
-    DB-->>B: 허용 max=34로 갱신
-    A->>DB: 쓰기 token=33
-    DB-->>A: 거부 33 < 34
-```
-
-```java
-// 락 획득 시 단조 증가 토큰 발급
-long fencingToken = redisTemplate.opsForValue()
-    .increment("fencing:token:resource");
-
-// 공유 자원(DB)에서 토큰 검증
-UPDATE shared_resource
-SET data = :data, last_token = :token
-WHERE id = :id AND last_token < :token  -- 오래된 토큰이면 무시
-```
-
-> **비유**: 병원 대기표와 같다. 33번 대기표를 들고 들어가려는데, 이미 34번 환자가 들어가 있으면 33번은 입장이 거부된다.
-
----
-
-### 시나리오 5: GC Stop-the-World
-
-**상황**: 대용량 트래픽으로 JVM Full GC가 35초간 발생했다. 락 TTL이 30초였다.
-
-```mermaid
-sequenceDiagram
-    A->>Redis: 락 획득 TTL 30초
-    Note over A: Full GC 35초 시작
-    Note over Redis: 30초 후 TTL 만료
-    B->>Redis: SET NX → OK
-    Note over A: GC 끝 (락 있다고 착각)
-    A->>DB: 작업 재개
-    B->>DB: 작업 시작
-    Note over DB: A, B 동시 진입!
-```
-
-**증상**: GC가 끝난 서버 A가 자신이 여전히 락을 보유하고 있다고 착각하고 작업을 이어간다.
-
-**해결 1**: 락 획득 후 **남은 TTL을 확인**하고, 충분하지 않으면 작업을 포기
-
-**해결 2**: Fencing token 패턴 적용 (DB 레벨 최종 방어)
-
-**해결 3**: G1GC/ZGC 등 STW가 짧은 GC 사용
-
----
-## 11. 전체 선택 가이드
-
-```mermaid
-graph LR
-    Q{"인스턴스?"} -->|단일| S["synchronized"]
-    Q -->|멀티·단순| L["Lettuce NX"]
-    Q -->|멀티·복잡| R["Redisson"]
-    R -->|완벽합의| Z["ZK/etcd"]
-```
-
----
-
-## 12. 분산 락 설계 체크리스트
-
-| 항목 | 필수 여부 | 설명 |
-|------|-----------|------|
-| TTL 설정 | **필수** | 데드락 방지 — 없으면 영구 데드락 |
-| unique value + Lua 해제 | **필수** | 남의 락 삭제 방지 |
-| 재시도 + 백오프 | 권장 | 일시적 실패 대응 |
-| 작업 시간 < TTL 보장 | **필수** | 작업 완료 전 TTL 만료 방지 |
-| Watchdog (TTL 연장) | 권장 | 장시간 작업 대응 (Redisson 내장) |
-| Fencing token | 강력 권장 | GC pause, 네트워크 파티션 최종 방어선 |
-| Redlock (다중 노드) | 고가용성 시 | 단일 장애점 제거 |
-| 타임아웃 | **필수** | 락 대기 무한 차단 방지 |
-| 멱등성 보장 | **필수** | 락 실패 시에도 안전한 로직 |
-| 남은 TTL 확인 | 권장 | GC STW 후 작업 재개 방지 |
-
----
-
-## 13. 정리
-
-분산 락은 **간단해 보이지만 극한 상황에서 깨지기 쉽다.** 핵심 원칙:
-
-1. **TTL은 반드시** 설정하되, 작업 시간보다 충분히 길게
-2. **해제는 반드시 Lua**로 — GET/DEL 분리 금지
-3. **Watchdog**은 leaseTime 미지정 시에만 활성화 — Redisson 권장
-4. **비동기 복제** 환경에서는 Redlock 또는 fencing token 필수
-5. **GC pause, 네트워크 파티션**은 락을 무효화한다 — DB 레벨 fencing token으로 방어
-6. **완벽한 분산 락은 없다** — 최종 방어선은 항상 DB 레벨 멱등성
-
----
-
-## 실무에서 자주 하는 실수
-
-**실수 1: 락 TTL보다 작업 시간이 길어 락 만료 후 중복 실행**
-TTL을 3초로 설정했는데 실제 작업이 5초 걸린다. 락이 만료되어 다른 프로세스가 락을 획득하고 두 프로세스가 동시에 임계 구역을 실행한다. Redisson의 watchdog(락 보유 중 자동 TTL 연장)을 사용하거나, 작업 최대 시간 + 여유 시간으로 TTL을 보수적으로 설정한다.
-
-**실수 2: 락 해제 시 자신의 락인지 검증 안 함**
-단순 `DEL lock_key`로 해제하면 TTL 만료 후 다른 프로세스가 잡은 락을 실수로 해제한다. 획득 시 고유 UUID를 값으로 저장하고, 해제 시 Lua 스크립트로 값 비교 후 삭제하는 패턴이 필수다.
-
-**실수 3: 단일 Redis 노드에서 Redlock 사용**
-Redlock은 독립적인 Redis 노드 5개(권장) 중 과반수에서 락을 획득해야 유효하다. 단일 노드나 Sentinel 구성에서 Redlock을 흉내 내면 의미가 없다. 단일 노드면 단순 SET NX + TTL, 강한 보장이 필요하면 5개 독립 노드 구성이 필요하다.
-
-**실수 4: GC pause/네트워크 지연으로 락 유효성 만료 무시**
-JVM GC pause가 수 초 발생하면 락 TTL이 만료된다. 코드는 GC 후 재개되어 락이 유효하다고 착각하고 임계 구역을 실행한다. DB 레벨 fencing token(단조 증가 버전)을 최종 방어선으로 설계해야 한다.
-
-**실수 5: 락 획득 실패 시 무한 재시도**
-`while(!tryLock()) { Thread.sleep(10); }` 형태로 무한 루프를 돌린다. 락을 보유한 프로세스가 죽으면 TTL만료까지 모든 스레드가 스핀하며 CPU를 소비한다. 최대 재시도 횟수와 타임아웃을 설정하고 실패 시 빠른 실패(fail-fast) 또는 대기열 방식으로 전환한다.
-
----
-
-## 핵심 메트릭
-
-| 메트릭 | 정상 기준 | 이상 신호 | 원인 가설 |
-|--------|---------|---------|---------|
-| 락 획득 실패율 | 1% 미만 | 5% 초과 | 락 보유 시간이 너무 길거나 경쟁 급증 |
-| 락 보유 시간 P99 | leaseTime의 50% 이하 | leaseTime의 80% 초과 | 외부 API 지연, GC STW, DB 응답 지연 |
-| Watchdog 갱신 횟수/분 | 처리량에 비례 | 갑자기 급증 | 작업 시간이 TTL 주기를 계속 초과 |
-| Redlock 합의 실패 횟수 | 0 | 증가 | Redis 노드 간 네트워크 지연, 노드 다운 |
-| 락 TTL 만료 후 해제 비율 | 0% | 증가 | unlock() 누락, 프로세스 비정상 종료 |
-| 스핀락 재시도 총 횟수/초 | 낮음 | 급증 | 경쟁 스레드 과다, 락 보유 시간 길어짐 |
-| 영구 락 키 수 (TTL=-1) | 0 | 1 이상 | Watchdog 활성화 + unlock() 미호출 |
-
-## 실제 장애 사례
-
-### 사례 1: Redlock 시계 드리프트로 이중 락 발생
-
-**상황**: 결제 서버 5대에 Redlock을 적용했다. NTP 재동기화로 서버 2대의 시스템 클럭이 갑자기 2초 앞으로 점프했다. 락 TTL이 3초였고, 클럭 점프 직후 일부 결제에서 이중 처리가 발생했다.
-
-**근본 원인**: Redlock의 유효 TTL 계산은 `초기 TTL - 경과 시간`이다. 클럭이 2초 점프하면 경과 시간이 2초 부풀려지고, TTL 3초 중 2초가 이미 지난 것으로 계산된다. 다른 프로세스가 같은 락을 획득할 수 있는 창이 열렸다.
-
-**해결책**:
-- fencing token 도입: 락 획득 시 단조 증가 번호 발급, DB는 이전보다 큰 토큰만 허용
-- NTP `tinker panic 0` 설정으로 큰 시간 점프 방지
-- 락 TTL을 클럭 드리프트 허용치의 10배 이상으로 설정
-
-**교훈**: 분산 락은 성능 최적화일 뿐 정합성 최종 보장이 아니다. fencing token과 DB 레벨 방어가 반드시 함께 있어야 한다.
-
----
-
-### 사례 2: GC STW로 락 만료 후 이중 재고 차감
-
-**상황**: 주문 처리 서버에서 Full GC가 35초 발생했다. 분산 락 TTL은 30초로 설정되어 있었다. GC가 끝났을 때 이미 다른 서버가 같은 주문의 재고를 차감한 상태였고, 깨어난 서버도 이어서 차감해 재고가 -1이 됐다.
-
-**근본 원인**: GC STW 동안 JVM 전체가 멈춘다. 락 보유 프로세스는 Watchdog이 없으면 TTL을 갱신하지 못한다. TTL이 만료된 틈에 다른 서버가 락을 획득했다.
-
-**해결책**:
-- Redisson Watchdog 적용(leaseTime 생략)으로 GC 중에도 별도 스레드가 TTL 갱신
-- G1GC/ZGC로 전환해 STW 최대 시간을 200ms 이하로 단축
-- DB `WHERE quantity >= :amount` 조건으로 음수 재고 방어
-
-**교훈**: 작업 시간을 예측할 수 없는 경우 Watchdog이 필수다. DB 레벨 방어선을 반드시 병행한다.
-
----
-
-### 사례 3: unlock() 누락으로 영구 락 발생
-
-**상황**: Watchdog을 활성화한 채 try-finally 없이 락을 보유하던 코드에서 RuntimeException이 발생했다. unlock()에 도달하지 못한 채 스레드가 종료됐고, Watchdog이 계속 TTL을 갱신했다. 해당 리소스 락은 수 시간 동안 해제되지 않아 해당 기능 전체가 응답 불가 상태가 됐다.
-
-**근본 원인**: Watchdog은 JVM이 살아있는 한 TTL을 계속 갱신한다. unlock()이 호출되지 않으면 영구 락이 된다.
-
-**해결책**:
-- 모든 Redisson 락 코드에 try-finally 패턴 강제 적용 (코드 리뷰 필수 체크)
-- 5분 이상 보유된 락을 감지하는 모니터링 스케줄러 추가
-- `config.setLockWatchdogTimeout(10000)`으로 Watchdog 갱신 주기를 10초로 단축
-
-**교훈**: Watchdog을 쓰면 try-finally는 선택이 아닌 생존 조건이다.
-
----
-
-## 면접 포인트
-
-**Q1. Redis 분산 락이 완벽하지 않은 이유는?**
-Redis 복제는 비동기다. 마스터가 락을 저장한 직후 장애가 나면 레플리카로 미처 복제되지 않은 상태로 failover가 일어난다. 새 마스터는 그 락을 모르고 다른 클라이언트가 락을 획득할 수 있다. Redlock은 독립 노드 과반수 합의로 이를 완화하지만 완전히 없애지는 못한다.
-
-**Q2. Redlock 알고리즘의 동작 원리는?**
-① 5개 독립 Redis 노드에 순차적으로 SET NX PX ttl 시도 ② 과반수(3개 이상) 성공하고 총 소요 시간이 TTL보다 짧으면 락 유효 ③ 실패 시 모든 노드에서 즉시 해제 ④ 락 유효 시간 = TTL - 네트워크 왕복 시간. 단, Martin Kleppmann은 clock skew와 GC pause 문제를 지적했으며 완벽한 보장은 아니다.
-
-**Q3. fencing token이란?**
-락 획득 시 단조 증가하는 토큰(버전 번호)을 발급한다. 클라이언트는 리소스에 접근할 때 토큰을 함께 전달하고, 리소스 서버는 이전에 본 토큰보다 큰 것만 허용한다. GC pause로 락이 만료됐다 재획득된 다른 클라이언트의 오래된 토큰을 거부할 수 있다.
-
-**Q4. Redisson의 watchdog은 어떻게 동작하는가?**
-락 획득 시 별도 스레드(watchdog)가 30초(기본) 간격으로 TTL을 연장한다. 락을 보유한 JVM이 죽으면 watchdog도 멈춰 TTL이 자연스럽게 만료된다. TTL을 명시적으로 지정하면 watchdog이 비활성화된다.
-
-**Q5. 분산 락 대신 DB 수준 제어로 해결할 수 있는 경우는?**
-재고 차감: `UPDATE stock = stock - 1 WHERE id = ? AND stock > 0` (원자적 조건부 업데이트). 중복 요청 방지: DB UNIQUE 제약 + 멱등성 키. 분산 락은 "읽고 → 외부 API 호출 → 쓰기" 같이 DB 단일 쿼리로 처리할 수 없는 복합 작업에서만 필요하다.
-
----
-## 극한 시나리오
-
-### 시나리오 1: 결제 중복 방지 — 네트워크 단절 후 재시도
-
-사용자가 결제 버튼을 클릭했는데 응답이 없어 한 번 더 클릭합니다. 서버는 두 요청을 동시에 받습니다.
-
-**락 없는 경우:**
-```
-요청1: SELECT balance → 100,000원 확인 → 차감 시작
-요청2: SELECT balance → 100,000원 확인 → 차감 시작  (요청1 커밋 전)
-결과: 100,000원짜리 결제가 두 번 실행 → 200,000원 이중 차감
-```
-
-**Redis 분산 락 적용:**
 ```java
 @Service
 @RequiredArgsConstructor
-public class PaymentService {
-    private final RedissonClient redissonClient;
-    private final PaymentRepository paymentRepository;
+public class OrderService {
 
-    public PaymentResult processPayment(String orderId, BigDecimal amount) {
-        String lockKey = "payment:lock:" + orderId;
-        RLock lock = redissonClient.getLock(lockKey);
+    private final RedissonClient redissonClient;
+    private final OrderRepository orderRepository;
+
+    public OrderResult processOrder(Long orderId) {
+        RLock lock = redissonClient.getLock("order:lock:" + orderId);
 
         try {
-            // 3초 대기, 10초 후 자동 해제 (Watchdog가 연장)
-            if (!lock.tryLock(3, 10, TimeUnit.SECONDS)) {
-                throw new PaymentInProgressException("결제가 이미 진행 중입니다.");
+            // waitTime=10초(락 대기), leaseTime=30초(보유 최대)
+            // leaseTime 지정 시 Watchdog 비활성화 — 명시적 제어 선호 시
+            boolean acquired = lock.tryLock(10, 30, TimeUnit.SECONDS);
+            if (!acquired) {
+                throw new LockAcquisitionException("주문 처리 중: " + orderId);
             }
-            // 멱등성 체크: 이미 처리된 주문인지 확인
-            if (paymentRepository.existsByOrderId(orderId)) {
-                return paymentRepository.findByOrderId(orderId);
-            }
-            return executePayment(orderId, amount);
+            return doProcessOrder(orderId);
         } catch (InterruptedException e) {
             Thread.currentThread().interrupt();
-            throw new PaymentException("결제 처리 중 인터럽트 발생");
+            throw new LockInterruptedException(e);
         } finally {
             if (lock.isHeldByCurrentThread()) {
                 lock.unlock();
@@ -1229,224 +324,880 @@ public class PaymentService {
 }
 ```
 
-**수치:** Redis 락 획득 레이턴시 < 1ms. DB Lock 대비 10~50배 빠름. 10만 TPS 환경에서 충돌 없이 처리 가능.
+---
 
-### 시나리오 2: 재고 선점 — 플래시 세일 1만 명 동시 접근
+## 6. Redisson Watchdog — 내부 메커니즘 완전 분석
 
-1만 개 재고에 10만 명이 동시 접근. 각 사용자가 재고를 "선점(Reserve)"하는 5초 동안 다른 사용자는 해당 재고를 가져갈 수 없어야 합니다.
+### 왜 30초 기본값인가
+
+Watchdog의 기본 TTL은 30초(`lockWatchdogTimeout`)다. 이 값이 선택된 이유는 "대부분의 작업이 30초 내에 완료"되는 경험적 기준이 아니라, **TTL 갱신 주기 계산**에서 나온다.
+
+Redisson은 TTL의 1/3 시점마다 갱신한다. 30초 TTL → 10초마다 갱신. 이렇게 하면 갱신 실패(네트워크 일시 장애) 후 2번의 재시도 기회가 있고, 그래도 실패하면 락이 만료된다. 즉 **가용성과 안전성 사이의 균형점**이 1/3 주기다.
+
+```
+TTL=30초, 갱신주기=10초:
+  t=0:  락 획득, TTL=30초
+  t=10: Watchdog 갱신 → TTL=30초 (리셋)
+  t=20: Watchdog 갱신 → TTL=30초 (리셋)
+  t=30: 갱신 실패(네트워크 단절) → TTL=30초 남아있음
+  t=60: 갱신 계속 실패 → TTL 만료 → 락 자동 해제
+  → 최악의 경우 30초 후 자동 해제 보장
+```
+
+### Watchdog 내부 구현 원리
+
+Redisson의 `RedissonLock.lock()` 소스(GitHub `RedissonLock.java`)를 보면 Watchdog은 `HashedWheelTimer`(Netty 내장)를 사용한다. leaseTime을 지정하지 않으면 `scheduleExpirationRenewal(threadId)`가 호출되어 타이머에 갱신 태스크를 등록한다.
 
 ```java
-// 선점 락: 사용자별로 특정 재고 아이템을 잠금
-public boolean reserveItem(Long itemId, Long userId) {
-    String lockKey = "item:reserve:" + itemId;
-    RLock lock = redissonClient.getLock(lockKey);
+// Redisson 내부 로직 (개념적 재현)
+private void scheduleExpirationRenewal(long threadId) {
+    ExpirationEntry entry = new ExpirationEntry();
+    entry.addThreadId(threadId);
 
-    try {
-        // 즉시 획득 실패 시 대기 없이 반환 (재고 없음 응답)
-        if (!lock.tryLock(0, 5, TimeUnit.SECONDS)) {
-            return false;  // 다른 사용자가 선점 중
-        }
-        // 5초 내 결제 완료 필요, 미완료 시 TTL 만료로 자동 해제
-        reservationCache.put(itemId, userId);
-        return true;
-    } catch (InterruptedException e) {
-        Thread.currentThread().interrupt();
-        return false;
-    }
-    // 주의: unlock을 여기서 하지 않음 (결제 완료 시 해제)
+    // lockWatchdogTimeout의 1/3 주기로 갱신
+    long renewalInterval = internalLockLeaseTime / 3; // 기본 10초
+
+    Timeout task = commandExecutor.getConnectionManager().newTimeout(
+        timeout -> renewExpiration(threadId),
+        renewalInterval,   // 10초 후 첫 실행
+        TimeUnit.MILLISECONDS
+    );
+    entry.setTimeout(task);
+    EXPIRATION_RENEWAL_MAP.put(getEntryName(), entry);
 }
 
-public void completePayment(Long itemId, Long userId) {
-    String lockKey = "item:reserve:" + itemId;
-    RLock lock = redissonClient.getLock(lockKey);
-    // 결제 완료 후 락 해제
+private void renewExpiration(long threadId) {
+    // Lua로 현재 스레드가 락 보유 중이면 TTL을 30초로 리셋
+    String renewScript =
+        "if redis.call('hexists', KEYS[1], ARGV[2]) == 1 then " +
+        "  return redis.call('pexpire', KEYS[1], ARGV[1]) " +
+        "return 0 end";
+    // 갱신 성공 → 다음 갱신 스케줄
+    // 갱신 실패(락 없음) → 스케줄 취소
+}
+```
+
+핵심은 `EXPIRATION_RENEWAL_MAP`이다. `getEntryName()`은 `id + ":" + name` 형태로 JVM 인스턴스 + 락 이름의 조합이다. **JVM이 죽으면 이 Map에서 엔트리가 사라지고 타이머도 멈춘다.** 따라서 JVM이 죽으면 Watchdog도 죽고, 30초 후 TTL 만료로 락이 자동 해제된다.
+
+### leaseTime 지정 여부에 따른 동작 비교
+
+```java
+// 케이스 1: leaseTime 생략 → Watchdog 활성
+lock.lock();                          // internalLockLeaseTime(30s) TTL + Watchdog
+lock.tryLock(10, TimeUnit.SECONDS);  // 10초 대기, Watchdog 활성
+
+// 케이스 2: leaseTime 명시 → Watchdog 비활성
+lock.tryLock(10, 30, TimeUnit.SECONDS); // 30초 후 강제 만료, Watchdog 없음
+
+// 케이스 3: Watchdog 타임아웃 커스터마이즈
+Config config = new Config();
+config.setLockWatchdogTimeout(10_000); // 10초 TTL, 3.3초마다 갱신
+```
+
+| 시나리오 | Watchdog (leaseTime 생략) | leaseTime=30초 명시 |
+|---------|--------------------------|---------------------|
+| 작업 정상 완료 (5초) | unlock() → Watchdog 중단 | unlock() → 즉시 해제 |
+| 작업이 느림 (45초) | TTL 갱신 → 45초에 완료, 안전 | 30초에 락 만료 → **이중 진입 위험** |
+| 프로세스 크래시 | Watchdog 중단 → 30초 후 만료 | 30초 후 만료 (동일) |
+| unlock() 누락 | **영구 락** (Watchdog이 계속 갱신) | 30초 후 만료 (자동 해제) |
+| GC STW 35초 | 다른 서버 35초 대기 | 30초에 만료 → **이중 진입** |
+
+**실무 권장**: 작업 시간이 예측 가능하면 leaseTime 명시, 예측 불가(외부 API 호출 등)면 Watchdog + try-finally 필수.
+
+```java
+// Watchdog 사용 시 try-finally는 생존 조건
+lock.lock();
+try {
+    callUnpredictableExternalApi();
+} finally {
     if (lock.isHeldByCurrentThread()) {
+        lock.unlock(); // 이 줄이 없으면 Watchdog이 영원히 갱신 → 영구 락
+    }
+}
+```
+
+---
+
+## 7. 재진입 락(Reentrant Lock) — 왜 필요하고 어떻게 동작하는가
+
+### 왜 재진입이 필요한가
+
+단순 뮤텍스 락에서 같은 스레드가 락을 두 번 획득하려 하면 데드락이 발생한다.
+
+```java
+public void methodA() {
+    lock.lock();
+    try {
+        methodB(); // methodB도 같은 락을 획득하려 한다
+    } finally {
+        lock.unlock();
+    }
+}
+
+public void methodB() {
+    lock.lock(); // 이미 같은 스레드가 잡고 있으므로 데드락!
+    try {
+        doWork();
+    } finally {
         lock.unlock();
     }
 }
 ```
 
-### 시나리오 3: Redis 노드 장애 시 락이 유실되면?
+재귀 호출이나 메서드 체인에서 같은 락이 필요한 경우가 실무에서 자주 발생한다. 재진입 락은 "이미 내가 잡은 락이면 다시 획득을 허용"하는 메커니즘이다.
 
-**문제:** 락을 획득한 직후 Redis 마스터가 다운되면, Sentinel이 레플리카를 마스터로 승격합니다. 새 마스터는 락 정보가 없으므로 다른 프로세스가 같은 락을 획득합니다. 두 프로세스가 동시에 임계 구역을 실행합니다.
+### Thread ID + 카운터 패턴
 
-**Redlock 알고리즘 (N=5 독립 Redis 노드):**
-```java
-// Redisson MultiLock으로 5개 노드 중 3개 이상 획득 시 유효
-RLock lock1 = redisson1.getLock("payment:lock:" + orderId);
-RLock lock2 = redisson2.getLock("payment:lock:" + orderId);
-RLock lock3 = redisson3.getLock("payment:lock:" + orderId);
-RLock lock4 = redisson4.getLock("payment:lock:" + orderId);
-RLock lock5 = redisson5.getLock("payment:lock:" + orderId);
+Redisson의 재진입 락은 Redis 해시(HSET)로 구현된다. 키는 락 이름, 필드는 `threadId`, 값은 **진입 횟수(카운터)**다.
 
-RLock multiLock = redissonClient.getMultiLock(lock1, lock2, lock3, lock4, lock5);
-multiLock.lock();
-// 5개 노드 중 3개 이상에 락이 기록되므로
-// 하나의 노드 장애로는 락 유실 없음
+```
+# Redis 데이터 구조 (RLock 내부)
+HSET "order:lock:42"  "JVM-ID:thread-123"  1   # 첫 번째 lock()
+HSET "order:lock:42"  "JVM-ID:thread-123"  2   # 두 번째 lock() (재진입)
+HSET "order:lock:42"  "JVM-ID:thread-123"  1   # 첫 번째 unlock()
+DEL  "order:lock:42"                            # 두 번째 unlock() → 완전 해제
 ```
 
-**실무 적용 기준:** 결제·재고처럼 중복 실행이 금전적 손해로 이어지는 경우 Redlock 도입. 일반 중복 방지(알림 중복 발송 등)는 단일 노드 락 + 멱등성 DB 체크 조합으로 충분합니다.
-
----
-
-## 비판적 결론 — 분산 락의 진짜 현실
-
-### Watchdog — 존재 이유와 위험을 둘 다 이해하라
-
-Watchdog이 있는 이유는 **leaseTime의 딜레마** 때문이다:
-- leaseTime 너무 짧게 → 작업 중 락 만료 → **이중 진입 (더 위험)**
-- leaseTime 너무 길게 → 장애 시 락이 오래 안 풀림
-
-Watchdog은 이 딜레마를 "작업 중이면 자동 연장"으로 해결한다. **나쁜 기능이 아니라 필요한 기능이다.** 하지만 위험을 모르고 쓰면 사고가 난다:
-
-- GC STW → Watchdog이 TTL 갱신 → 다른 프로세스 무한 대기
-- unlock() 누락 → Watchdog이 영원히 갱신 → 영구 락
-
-| 상황 | 권장 |
-|------|------|
-| 작업 시간 예측 가능 (99%) | `tryLock(3, 10, SECONDS)` — leaseTime 명시 |
-| 작업 시간 예측 불가 (외부 API) | Watchdog 사용 + **반드시 try-finally** |
-| 어떤 경우든 | **DB 최종 방어선 필수** |
+Redisson은 `UUID:threadId` 조합을 필드 키로 사용한다. UUID는 JVM 인스턴스를 식별(서버 구분), threadId는 스레드를 식별한다.
 
 ```java
-// 작업 시간 예측 가능: leaseTime 명시 (Watchdog 비활성)
-lock.tryLock(3, 10, TimeUnit.SECONDS);
-
-// 작업 시간 예측 불가: Watchdog + try-finally 필수
-lock.lock();
-try {
-    callExternalApi(); // 시간 예측 불가
-} finally {
-    if (lock.isHeldByCurrentThread()) lock.unlock();
-}
+// Redisson 재진입 락 내부 Lua (개념적 재현)
+String lockScript =
+    // 락이 없으면: 새로 생성, 카운터=1
+    "if redis.call('exists', KEYS[1]) == 0 then " +
+    "  redis.call('hset', KEYS[1], ARGV[2], 1) " +
+    "  redis.call('pexpire', KEYS[1], ARGV[1]) " +
+    "  return nil " +
+    // 락이 있고 내 스레드 것이면: 카운터 증가
+    "elseif redis.call('hexists', KEYS[1], ARGV[2]) == 1 then " +
+    "  redis.call('hincrby', KEYS[1], ARGV[2], 1) " +
+    "  redis.call('pexpire', KEYS[1], ARGV[1]) " +
+    "  return nil " +
+    // 다른 스레드 것: 남은 TTL 반환 (대기 시간으로 사용)
+    "end " +
+    "return redis.call('pttl', KEYS[1])";
 ```
 
-**leaseTime vs Watchdog — 프로세스 상태별 비교**:
-
-| 상황 | leaseTime=10초 | Watchdog (TTL 30초) |
-|------|---------------|-------------------|
-| 정상 완료 (5초) | 5초에 unlock → 즉시 해제 | 5초에 unlock → 즉시 해제 |
-| 프로세스 죽음 (5초에) | 10초에 TTL 만료 → 자동 해제 | 30초에 TTL 만료 → 자동 해제 (복구 느림) |
-| 작업이 느림 (15초 걸림) | **10초에 락 만료 → 이중 진입!** | TTL 연장 → 15초에 완료 → 안전 |
-| GC STW (30초) | 10초에 락 만료 → 이중 진입 | TTL 갱신 → 다른 프로세스 30초 대기 |
-
-> **결론**: leaseTime은 "프로세스 죽음"에 강하고, Watchdog은 "프로세스 느림"에 강하다. 둘 다 완벽하지 않으므로 **DB 최종 방어선이 반드시 필요하다.** 프로세스가 죽는 건 leaseTime이든 Watchdog이든 TTL 만료로 해결되지만, 프로세스가 느린 건 Watchdog만 해결할 수 있다.
-
-### 영구 락 감지와 복구 — Watchdog을 쓰든 안 쓰든 필요하다
-
-Watchdog + try-finally를 완벽히 지켜도 **프로세스가 kill -9로 죽으면 finally 블록이 실행 안 된다**. Watchdog 스레드도 같이 죽으므로 TTL이 갱신 안 되어 leaseTime 후 만료되긴 하지만, leaseTime을 생략했다면? Redisson의 기본 lockWatchdogTimeout(30초) 후 만료된다. 하지만 **JVM은 죽었는데 Redis 커넥션이 TIME_WAIT로 남아있으면** Watchdog이 죽었는지 Redis가 모른다.
-
-**1단계: 모니터링 — 오래된 락 알림**
-
 ```java
-// 스케줄러: 5분 이상 보유된 락 감지
-@Scheduled(fixedRate = 60000)
-public void detectStaleLocks() {
-    Set<String> keys = redis.keys("lock:*");
-    for (String key : keys) {
-        Long ttl = redis.ttl(key);
-        // Watchdog이 갱신 중이면 TTL이 항상 20~30초 범위
-        // TTL이 -1(영구)이면 Watchdog 없이 락이 걸린 것 → 위험
-        if (ttl == -1) {
-            alert.send("영구 락 감지: " + key);
+// 실제 사용 - 재진입이 투명하게 동작
+@Service
+public class InventoryService {
+
+    private final RedissonClient redissonClient;
+
+    public void processOrder(Long orderId) {
+        RLock lock = redissonClient.getLock("order:" + orderId);
+        lock.lock(); // 카운터: 1
+        try {
+            validateOrder(orderId, lock); // 내부에서 같은 락 재획득
+        } finally {
+            lock.unlock(); // 카운터: 0 → 완전 해제
         }
-        // TTL이 있지만 값이 오래된 프로세스 ID면 → 좀비 락
-        String holder = redis.get(key);
-        if (!isProcessAlive(holder)) {
-            alert.send("좀비 락: " + key + " holder=" + holder);
+    }
+
+    private void validateOrder(Long orderId, RLock lock) {
+        lock.lock(); // 같은 스레드 → 카운터: 2, 데드락 없음
+        try {
+            // 검증 로직
+        } finally {
+            lock.unlock(); // 카운터: 1 (아직 해제 안 됨)
         }
     }
 }
 ```
 
-**2단계: 자동 복구 — 좀비 프로세스의 락 강제 해제**
+---
+
+## 8. Fair Lock — 왜 불공정 락이 처리량이 더 높은가
+
+### 불공정 락(기본 RLock)의 동작
+
+락이 해제될 때 Redisson은 Pub/Sub 채널에 `PUBLISH`를 보낸다. 대기 중인 모든 스레드가 깨어나 동시에 `SET NX`(또는 Lua 획득 스크립트)를 시도한다. 어떤 스레드가 먼저 Redis에 도달하느냐에 따라 락이 부여된다. 네트워크 지연이 짧은 서버, 스케줄러가 먼저 깨운 스레드가 유리하다.
+
+이것이 **불공정**한 이유다. 10초 전부터 기다리던 스레드보다 방금 도착한 스레드가 먼저 락을 잡을 수 있다. 기아(Starvation)가 발생할 수 있다.
+
+불공정 락이 **처리량이 더 높은 이유**는 Redis 왕복 횟수다. 공정 락은 대기 순서를 관리하는 추가 데이터 구조(Redis List 기반 큐)가 필요하다. 락 획득마다 큐 조작 + 차례 확인 + Lua 스크립트 실행이 더 발생한다. 불공정 락은 "먼저 도착한 자가 잡는" 단순 경쟁이므로 오버헤드가 없다.
+
+### FairLock 내부 구조
+
+Redisson의 FairLock은 Redis에 다음 두 구조를 유지한다.
+
+```
+# 1. 락 해시 (일반 RLock과 동일)
+HSET "fairLock:resource"  "JVM-A:thread-1"  1
+
+# 2. 대기 큐 (Redis List)
+RPUSH "redisson_lock_queue:{fairLock:resource}"  "JVM-B:thread-2"
+RPUSH "redisson_lock_queue:{fairLock:resource}"  "JVM-C:thread-3"
+
+# 3. 대기자 타임아웃 (Redis ZSet — 대기 만료 관리)
+ZADD "redisson_lock_timeout:{fairLock:resource}"  <expire_timestamp>  "JVM-B:thread-2"
+```
+
+unlock 시 큐의 맨 앞(`LPOP`)을 꺼내 그 스레드에게만 Pub/Sub 알림을 보낸다. 다른 스레드는 깨우지 않는다. **완전히 순서대로** 처리된다.
 
 ```java
-// 락 값에 "processId:threadId:timestamp"를 저장
-// 일정 시간(예: 10분) 이상 된 락은 강제 해제
-public void forceReleaseStaleLocks(Duration maxAge) {
-    Set<String> keys = redis.keys("lock:*");
-    for (String key : keys) {
-        String value = redis.get(key);
-        if (value == null) continue;
+RLock fairLock = redissonClient.getFairLock("resource:fair");
 
-        long lockTime = extractTimestamp(value);
-        if (System.currentTimeMillis() - lockTime > maxAge.toMillis()) {
-            String holder = extractProcessId(value);
-            if (!isProcessAlive(holder)) {
-                redis.del(key); // 강제 해제
-                log.warn("좀비 락 강제 해제: key={}, holder={}, age={}min",
-                    key, holder, (System.currentTimeMillis() - lockTime) / 60000);
+try {
+    // 먼저 요청한 스레드가 먼저 획득 (Starvation 없음)
+    // 단, 일반 RLock 대비 약 20~30% 처리량 감소
+    fairLock.lock();
+    doWork();
+} finally {
+    fairLock.unlock();
+}
+```
+
+**언제 FairLock을 써야 하는가**: 모든 요청이 결국 처리되어야 하고, 일부 스레드가 장시간 기아 상태에 빠지면 안 되는 경우. 처리량보다 공정성이 중요한 경우. 예: 배치 작업 큐, 선착순 티켓팅.
+
+**일반 RLock을 써야 하는 경우**: 처리량이 중요하고, 일부 재시도는 허용되는 경우. 예: 재고 차감, 결제 처리.
+
+---
+
+## 9. Fencing Token — GC pause가 락을 무력화하는 과정
+
+### GC Stop-The-World가 락을 무력화하는 과정
+
+Java의 Full GC(G1GC 이전의 Parallel GC, CMS)는 STW(Stop-The-World)를 유발한다. STW 동안 **JVM 내 모든 스레드가 멈춘다.** Watchdog도 멈춘다.
+
+```
+t=0:  서버 A, 락 획득 (TTL 30초), Watchdog 활성
+t=5:  Full GC 발생 → JVM 전체 정지 (Watchdog 포함)
+t=35: GC 완료 → 코드 재개 (30초 동안 아무것도 못함)
+      → 락 TTL은 t=30에 만료됨!
+      → 서버 A는 자신이 락을 보유 중이라 착각
+t=31: 서버 B → 락 획득 성공 (TTL 만료 후)
+t=35: 서버 A와 서버 B 동시에 임계 구역 실행!
+```
+
+Watchdog을 썼어도 동일하다. Watchdog 스레드도 STW에 묶여 갱신하지 못한다.
+
+### Fencing Token 패턴 — 스테일 락 홀더 차단
+
+락을 획득할 때 **단조 증가하는 토큰(monotonic token)**을 발급한다. 공유 자원(DB, 파일 서버 등)은 토큰을 검사하여 이전보다 큰 토큰만 허용한다. 오래된 락 보유자(stale holder)가 작업을 시도해도 DB가 거부한다.
+
+```mermaid
+graph LR
+    A["서버A token=33"] -->|쓰기요청| DB["DB"]
+    B["서버B token=34"] -->|쓰기요청| DB
+    DB -->|33 < 34 거부| A
+    DB -->|34 허용| B
+```
+
+```java
+// 1단계: 락 획득 시 단조 증가 토큰 발급
+@Service
+@RequiredArgsConstructor
+public class FencedLockService {
+
+    private final RedissonClient redissonClient;
+    private final StringRedisTemplate redisTemplate;
+    private final StockRepository stockRepository;
+
+    public void decreaseStockWithFencing(Long productId, int amount) {
+        RLock lock = redissonClient.getLock("stock:lock:" + productId);
+
+        try {
+            if (!lock.tryLock(10, 30, TimeUnit.SECONDS)) {
+                throw new LockAcquisitionException("락 획득 실패");
+            }
+
+            // 단조 증가 토큰 발급 (Redis INCR는 원자적)
+            Long fencingToken = redisTemplate.opsForValue()
+                .increment("fencing:token:stock:" + productId);
+
+            // 토큰을 DB 쓰기에 함께 전달
+            decreaseStockWithToken(productId, amount, fencingToken);
+
+        } catch (InterruptedException e) {
+            Thread.currentThread().interrupt();
+            throw new LockInterruptedException(e);
+        } finally {
+            if (lock.isHeldByCurrentThread()) {
+                lock.unlock();
+            }
+        }
+    }
+
+    private void decreaseStockWithToken(Long productId, int amount, Long token) {
+        // DB가 토큰을 검사하여 stale holder 차단
+        // last_fence_token < token 인 경우만 업데이트
+        int updated = stockRepository.decreaseStockWithFencing(productId, amount, token);
+        if (updated == 0) {
+            throw new StaleTokenException("토큰 검증 실패: stale lock holder");
+        }
+    }
+}
+```
+
+```sql
+-- DB 스키마: 마지막 토큰을 저장
+ALTER TABLE stock ADD COLUMN last_fence_token BIGINT DEFAULT 0;
+
+-- 토큰 검증 쿼리: 더 오래된 토큰의 쓰기 거부
+UPDATE stock
+SET quantity = quantity - :amount,
+    last_fence_token = :token
+WHERE product_id = :productId
+  AND quantity >= :amount
+  AND last_fence_token < :token;  -- stale token 거부
+```
+
+```java
+// Spring Data JPA 어노테이션
+@Modifying
+@Query("UPDATE Stock s SET s.quantity = s.quantity - :amount, " +
+       "s.lastFenceToken = :token " +
+       "WHERE s.productId = :productId " +
+       "AND s.quantity >= :amount " +
+       "AND s.lastFenceToken < :token")
+int decreaseStockWithFencing(@Param("productId") Long productId,
+                              @Param("amount") int amount,
+                              @Param("token") Long token);
+```
+
+> **비유**: 병원 대기표와 같다. 33번 환자가 GC로 35분 쉬는 동안 34번 환자가 먼저 진료를 받았다. 33번이 뒤늦게 들어오려 해도 "이미 34번이 지나갔으므로 33번 입장 불가"로 거부된다.
+
+---
+
+## 10. Redlock 알고리즘 — N/2+1의 수학과 논쟁
+
+### 왜 단일 Redis는 신뢰할 수 없는가
+
+Redis 마스터-레플리카 구성에서 복제는 **비동기**다. 마스터가 락을 저장하고 레플리카에 복제하기 전에 마스터가 죽으면 레플리카에는 락이 없다. Sentinel이 레플리카를 마스터로 승격시키면 새 마스터는 "빈" 상태로 시작한다. 다른 클라이언트가 새 마스터에서 같은 키로 락을 획득한다.
+
+```
+t=0: 클라이언트 A → 마스터에서 SET NX → 성공 (락 획득)
+t=1: 마스터 장애! (복제 미완료)
+t=2: Sentinel → 레플리카 승격 (락 키 없음)
+t=3: 클라이언트 B → 새 마스터에서 SET NX → 성공 (이중 락!)
+```
+
+### Redlock 알고리즘: N/2+1이 왜 과반수인가
+
+Redis 창시자 Antirez가 제안한 Redlock은 **N개의 독립 Redis 마스터**(레플리카 없음)에서 과반수를 얻어야 락으로 인정한다.
+
+N=5 기준:
+- 최대 허용 장애 노드: 2개 (N/2 = 2.5, 내림 = 2)
+- 필요 성공 노드: 3개 (N/2 + 1 = 3.5, 올림 = 3)
+
+왜 과반수인가? 분산 시스템에서 두 클라이언트가 동시에 락을 얻으려면 각각 과반수 노드에서 성공해야 한다. 과반수는 정의상 서로 겹치는 노드가 반드시 1개 이상 존재한다. 그 겹치는 노드가 먼저 도착한 클라이언트의 락을 보유 중이므로 두 번째 클라이언트는 과반수를 달성하지 못한다. **두 클라이언트가 동시에 과반수를 달성하는 것은 수학적으로 불가능하다.**
+
+### 유효 TTL 계산
+
+```
+유효 TTL = 초기 TTL - 경과 시간 - 클럭 드리프트 보정값
+         = T_ttl - (T_end - T_start) - (N * drift_factor + jitter)
+```
+
+5개 노드에 순차적으로 요청을 보내면 시간이 걸린다. 과반수 획득 시점의 남은 유효 시간이 실제 락 유효 기간이다. 이것이 0 이하면 락 획득을 포기하고 모든 노드에서 해제한다.
+
+```java
+@Configuration
+public class RedlockConfig {
+
+    @Bean
+    public RedissonClient redissonClient1() { return createClient("redis://node1:6379"); }
+    @Bean
+    public RedissonClient redissonClient2() { return createClient("redis://node2:6379"); }
+    @Bean
+    public RedissonClient redissonClient3() { return createClient("redis://node3:6379"); }
+    @Bean
+    public RedissonClient redissonClient4() { return createClient("redis://node4:6379"); }
+    @Bean
+    public RedissonClient redissonClient5() { return createClient("redis://node5:6379"); }
+
+    private RedissonClient createClient(String address) {
+        Config config = new Config();
+        config.useSingleServer().setAddress(address);
+        return Redisson.create(config);
+    }
+}
+
+@Service
+@RequiredArgsConstructor
+public class RedlockService {
+
+    private final RedissonClient redissonClient1;
+    private final RedissonClient redissonClient2;
+    private final RedissonClient redissonClient3;
+    private final RedissonClient redissonClient4;
+    private final RedissonClient redissonClient5;
+
+    public void processWithRedlock(Long resourceId) {
+        RLock lock1 = redissonClient1.getLock("redlock:" + resourceId);
+        RLock lock2 = redissonClient2.getLock("redlock:" + resourceId);
+        RLock lock3 = redissonClient3.getLock("redlock:" + resourceId);
+        RLock lock4 = redissonClient4.getLock("redlock:" + resourceId);
+        RLock lock5 = redissonClient5.getLock("redlock:" + resourceId);
+
+        // 5개 중 3개 이상 성공 시 락 획득
+        RLock redLock = redissonClient1.getRedLock(lock1, lock2, lock3, lock4, lock5);
+
+        try {
+            // 10초 대기, 30초 보유
+            boolean acquired = redLock.tryLock(10, 30, TimeUnit.SECONDS);
+            if (!acquired) {
+                throw new LockAcquisitionException("Redlock 획득 실패");
+            }
+            doCriticalWork(resourceId);
+        } catch (InterruptedException e) {
+            Thread.currentThread().interrupt();
+            throw new LockInterruptedException(e);
+        } finally {
+            if (redLock.isHeldByCurrentThread()) {
+                redLock.unlock(); // 5개 노드 모두에서 해제 시도
             }
         }
     }
 }
-
-// 프로세스 생존 확인: 헬스체크 엔드포인트 호출
-private boolean isProcessAlive(String processId) {
-    try {
-        restTemplate.getForEntity(
-            "http://" + processId + "/actuator/health", String.class);
-        return true;
-    } catch (Exception e) {
-        return false; // 응답 없음 = 죽은 프로세스
-    }
-}
 ```
 
-**3단계: 수동 해제는 가능하면 쓰지 마라**
+### Martin Kleppmann의 비판
 
-수동 해제는 **락 보유자가 느리게 살아있을 때 이중 진입**을 만드므로, 안 쓰는 게 최선이다.
+2016년 Kleppmann(DDIA 저자)은 "[How to do distributed locking](https://martin.kleppmann.com/2016/02/08/how-to-do-distributed-locking.html)"에서 Redlock의 두 가지 근본 문제를 지적했다.
 
-**수동 해제가 필요 없는 이유**:
-- leaseTime 명시 → TTL 만료로 자동 해제
-- Watchdog → 프로세스 죽으면 Watchdog도 죽음 → 30초 후 자동 해제
-- **영구 락이 되는 유일한 케이스**: Watchdog + unlock() 누락 → **코드 리뷰와 try-finally로 원천 차단**
+**비판 1: 클럭 드리프트(Clock Drift)**
 
-그래도 만약을 위해 **비상용 도구는 만들어두되, 일상적으로 쓰면 안 된다**:
+Redlock은 유효 TTL을 계산할 때 시스템 클럭에 의존한다. 만약 NTP 동기화로 한 노드의 시계가 갑자기 앞으로 점프하면, 그 노드에서 락의 TTL이 실제보다 빨리 만료된다. TTL이 3초인데 시계가 2초 점프하면, 실질적으로 1초짜리 락이 된다. 이 짧은 창에 다른 클라이언트가 과반수를 달성할 수 있다.
+
+**비판 2: GC pause 문제**
+
+```
+t=0:  클라이언트 A, 5개 노드 중 3개에서 락 획득 (과반수 성공)
+t=1:  클라이언트 A의 JVM Full GC 시작 (35초)
+t=31: 락 TTL 만료 (모든 노드에서)
+t=32: 클라이언트 B, 5개 노드 모두에서 락 획득
+t=35: 클라이언트 A GC 완료, 여전히 락 보유 중이라 착각
+      → A와 B 동시에 임계 구역 진입!
+```
+
+Kleppmann의 결론: **Redlock은 strong consistency가 필요한 경우에 사용하기 안전하지 않다.** fencing token 없이는 GC pause 시나리오를 막을 수 없다.
+
+### Antirez의 반론
+
+Antirez는 "[Is Redlock safe?](http://antirez.com/news/101)"에서 반박했다.
+
+- 클럭 드리프트: NTP는 점진적으로 조정한다. 급격한 점프는 설정 오류이며, `ntpd`의 `tinker panic 0`으로 방지 가능하다.
+- GC pause: GC로 인한 35초 STW는 비현실적이다. G1GC, ZGC로 STW를 수백 ms 이하로 제한하면 실제 문제가 되지 않는다.
+- Kleppmann이 제안하는 fencing token을 쓰려면 결국 공유 자원(DB)이 토큰을 검증해야 한다. 그렇다면 DB가 이미 동시성 제어를 하고 있는 것이므로, 분산 락 자체가 불필요해진다.
+
+**실무적 결론**: 완전한 합의(consensus)가 필요하면 Raft 기반 ZooKeeper/etcd를 사용한다. 금전적 손해가 발생하는 결제, 재고 차감에는 Redlock + fencing token + DB 레벨 방어를 조합한다.
+
+---
+
+## 11. Redisson 락 종류 — 상황별 선택 가이드
+
+### MultiLock — 데드락 없는 복수 자원 잠금
+
+계좌 이체에서 출금 계좌와 입금 계좌를 동시에 잠가야 한다. 순서를 정하지 않으면 A→B 이체와 B→A 이체가 동시에 발생할 때 데드락이 생긴다.
 
 ```java
-// 비상용 — 프로세스 사망 확인 후에만 사용
-@DeleteMapping("/admin/locks/{key}")
-@PreAuthorize("hasRole('ADMIN')")
-public ResponseEntity<String> emergencyUnlock(@PathVariable String key) {
-    String holder = extractProcessId(redis.opsForValue().get("lock:" + key));
-    if (holder != null && isProcessAlive(holder)) {
-        return ResponseEntity.status(409)
-            .body("프로세스 살아있음. 강제 해제 불가.");
+@Service
+@RequiredArgsConstructor
+public class TransferService {
+
+    private final RedissonClient redissonClient;
+    private final AccountRepository accountRepository;
+
+    public void transfer(Long fromId, Long toId, BigDecimal amount) {
+        // 락 획득 순서를 ID 크기로 정렬 → 데드락 원천 차단
+        Long smallId = Math.min(fromId, toId);
+        Long largeId = Math.max(fromId, toId);
+
+        RLock lock1 = redissonClient.getLock("account:lock:" + smallId);
+        RLock lock2 = redissonClient.getLock("account:lock:" + largeId);
+        RLock multiLock = redissonClient.getMultiLock(lock1, lock2);
+
+        try {
+            // 두 락을 원자적으로 획득 — 하나 실패 시 전체 롤백 후 재시도
+            boolean acquired = multiLock.tryLock(10, 30, TimeUnit.SECONDS);
+            if (!acquired) {
+                throw new LockAcquisitionException("계좌 락 획득 실패");
+            }
+            accountRepository.debit(fromId, amount);
+            accountRepository.credit(toId, amount);
+        } catch (InterruptedException e) {
+            Thread.currentThread().interrupt();
+            throw new TransferException(e);
+        } finally {
+            if (multiLock.isHeldByCurrentThread()) {
+                multiLock.unlock();
+            }
+        }
     }
-    redis.delete("lock:" + key);
-    auditLog.log("EMERGENCY_UNLOCK", key, getCurrentAdmin());
-    return ResponseEntity.ok("해제됨");
 }
 ```
 
-> **핵심**: 1~2단계(모니터링 + 자동 복구)만 잘 구축하면 **수동 해제는 1년에 한 번도 안 쓸 수 있다.** 수동 해제에 의존하는 운영은 설계가 잘못된 것이다.
+### ReadWriteLock — 읽기 병렬화로 처리량 향상
 
-### Named Lock도 답이 아니다
+읽기는 여러 스레드가 동시에 수행해도 데이터가 변경되지 않으므로 안전하다. 쓰기만 배타적으로 처리하면 된다.
 
-Named Lock은 Redis 없이 DB만으로 분산 락을 구현할 수 있어 매력적이지만:
+```java
+@Service
+@RequiredArgsConstructor
+public class CatalogService {
 
-- 커넥션 풀 고갈: 락 전용 DataSource를 분리해야 하는 운영 부담
-- `GET_LOCK('key', -1)`: Watchdog과 동일한 무한 대기 문제
-- 트랜잭션 롤백해도 락 유지: try-finally 빠뜨리면 영구 락
-- DB 장애 = 락 전체 중단: Redis보다 SPOF 위험이 더 큼
+    private final RedissonClient redissonClient;
+    private final CatalogRepository catalogRepository;
 
-### 그래서 정답은?
+    // 다수의 스레드가 동시에 읽기 가능 (처리량 극대화)
+    public Catalog getCatalog(Long catalogId) {
+        RReadWriteLock rwLock = redissonClient.getReadWriteLock("catalog:rw:" + catalogId);
+        RLock readLock = rwLock.readLock();
+        readLock.lock();
+        try {
+            return catalogRepository.findById(catalogId)
+                .orElseThrow(() -> new CatalogNotFoundException(catalogId));
+        } finally {
+            readLock.unlock();
+        }
+    }
 
-**어떤 분산 락도 100% 안전하지 않다.** 이것을 인정하는 것이 시작이다.
+    // 쓰기 시에만 배타적 락 (읽기 스레드 전부 대기)
+    public void updateCatalog(Long catalogId, CatalogUpdateRequest request) {
+        RReadWriteLock rwLock = redissonClient.getReadWriteLock("catalog:rw:" + catalogId);
+        RLock writeLock = rwLock.writeLock();
+        writeLock.lock();
+        try {
+            catalogRepository.update(catalogId, request);
+        } finally {
+            writeLock.unlock();
+        }
+    }
+}
+```
 
-| 계층 | 역할 | 수단 |
+| 현재 상태 \ 요청 | 읽기 락 | 쓰기 락 |
+|----------------|---------|---------|
+| 잠금 없음 | 즉시 허용 | 즉시 허용 |
+| 읽기 락 1개+ | 즉시 허용 (동시 읽기) | 대기 |
+| 쓰기 락 1개 | 대기 | 대기 |
+
+### Semaphore — 외부 API 동시 호출 제한
+
+```java
+@Service
+@RequiredArgsConstructor
+public class ExternalApiService {
+
+    private final RedissonClient redissonClient;
+    private final WebClient webClient;
+
+    // 외부 결제 API 동시 호출 최대 50개로 제한 (외부 API SLA 준수)
+    public PaymentResult callPaymentApi(PaymentRequest request) {
+        RSemaphore semaphore = redissonClient.getSemaphore("semaphore:payment-api");
+        semaphore.trySetPermits(50); // 최초 한 번만 설정
+
+        try {
+            boolean acquired = semaphore.tryAcquire(1, 5, TimeUnit.SECONDS);
+            if (!acquired) {
+                throw new ApiThrottleException("결제 API 호출 한도 초과");
+            }
+            try {
+                return webClient.post()
+                    .uri("/payment")
+                    .bodyValue(request)
+                    .retrieve()
+                    .bodyToMono(PaymentResult.class)
+                    .block(Duration.ofSeconds(10));
+            } finally {
+                semaphore.release();
+            }
+        } catch (InterruptedException e) {
+            Thread.currentThread().interrupt();
+            throw new ApiCallException(e);
+        }
+    }
+}
+```
+
+---
+
+## 12. 면접 포인트 5개 — WHY 중심 깊은 답변
+
+### Q1. SETNX와 EXPIRE를 왜 분리하면 안 되는가?
+
+**핵심 WHY**: Redis의 싱글 스레드 모델은 단일 명령의 원자성만 보장한다. SETNX와 EXPIRE는 별개의 명령이므로 두 명령 사이에 다른 클라이언트 명령이 실행될 수 있다. 더 심각한 것은 클라이언트 자체 문제다. SETNX 성공 직후 애플리케이션이 크래시하면 EXPIRE를 보내지 못한다. 결과는 TTL 없는 영구 키이므로 데드락이 된다. `SET NX EX`는 Redis 서버 내에서 단일 명령으로 파싱-실행되므로 중간에 끊길 수 없다.
+
+### Q2. Lua 스크립트가 원자적인 메커니즘은 무엇인가?
+
+**핵심 WHY**: Redis 이벤트 루프는 `ae.c`의 `aeProcessEvents()`가 I/O 이벤트를 처리한다. `EVAL` 명령 핸들러는 Lua 인터프리터를 호출하고, 스크립트가 완전히 종료될 때까지 다른 명령의 실행 핸들러가 호출되지 않는다. 이것은 명시적 잠금이 아니라 싱글 스레드 이벤트 루프의 구조적 특성이다. Lua 스크립트 내의 여러 Redis 명령은 모두 같은 이벤트 루프 사이클에서 실행된다. `EVALSHA`는 SHA1 해시로 스크립트를 참조하므로 네트워크 전송량과 파싱 시간이 줄어들고, NOSCRIPT 에러 시 자동 폴백으로 안전성을 유지한다.
+
+### Q3. Watchdog이 정확히 1/3 주기로 갱신하는 이유는?
+
+**핵심 WHY**: 1/3 주기는 네트워크 일시 장애에 대한 허용 횟수를 2회로 설정하기 위한 설계 결정이다. TTL=30초, 갱신주기=10초면 갱신이 연속으로 2번 실패해도 3번째 갱신(30초 시점)이 성공하면 락이 만료되지 않는다. 3번 모두 실패하면(네트워크 완전 단절) 30초 후 락이 자동 만료된다. 1/2 주기면 1번 실패 허용(안전하지만 갱신 빈도 높음), 1/4 주기면 3번 실패 허용(여유 있지만 빠른 만료 대응 늦음). 1/3는 이 트레이드오프의 균형점이다.
+
+### Q4. Redlock의 N/2+1 과반수가 이중 락을 막는 수학적 이유는?
+
+**핵심 WHY**: N개 노드에서 두 클라이언트가 동시에 락을 얻으려면, 각각 과반수(N/2+1) 이상의 노드에서 성공해야 한다. 두 집합의 합이 2*(N/2+1) = N+2이므로, N개 노드에서 반드시 (N+2)-N = 2개 이상의 노드가 양쪽 집합에 모두 포함된다. 그 겹치는 노드는 먼저 도착한 클라이언트의 락을 보유 중이므로 두 번째 클라이언트의 SET NX를 거부한다. 따라서 두 클라이언트가 동시에 과반수를 달성하는 것은 수학적으로 불가능하다. Kleppmann의 비판은 이 수학이 틀린 게 아니라, **TTL 만료 후** 재획득 시점의 시간 의존성 문제다.
+
+### Q5. Fencing Token이 GC pause 문제를 해결하는 원리는?
+
+**핵심 WHY**: 분산 락의 근본 한계는 "락 보유자가 락을 보유 중인지 락 자체가 모른다"는 것이다. 락은 TTL로만 유효성을 판단하고, 보유자의 실제 상태(살아있음, GC 중, 느림)를 모른다. Fencing Token은 이 문제를 공유 자원 레벨로 이동시킨다. 락 획득 시 단조 증가 토큰을 부여하고, 공유 자원이 "마지막으로 허용한 토큰보다 큰 경우만 처리"한다. GC 후 깨어난 stale holder가 가진 토큰(예: 33)은 이미 최신 lock holder의 토큰(예: 34)보다 작으므로 DB 레벨에서 거부된다. 락의 시간 의존성을 토큰의 순서 의존성으로 대체하는 것이 핵심이다.
+
+---
+
+## 13. 극한 시나리오
+
+### 시나리오 1: 결제 서버 GC STW 35초 — Watchdog vs leaseTime
+
+**상황**: 쿠팡 결제 서버가 힙 메모리 부족으로 Full GC가 35초 발생했다. 락 TTL은 30초로 설정되어 있었다.
+
+```
+[leaseTime=30초 설정 시]
+t=0:  결제 서버 A, 주문 42번 락 획득 (TTL=30초), 재고 확인 시작
+t=3:  Full GC 시작 → JVM 전체 정지
+t=30: 락 TTL 만료
+t=31: 결제 서버 B, 주문 42번 락 획득, 재고 1개 확인, 차감 시작
+t=32: 결제 서버 B, 재고 차감 완료 (재고 0개)
+t=38: 결제 서버 A GC 완료, 재고 1개라고 착각한 채 차감 시도
+      → DB: WHERE quantity >= 1 조건 실패 → InsufficientStockException
+      → 재고 음수 방지 성공 (DB 레벨 방어가 막음)
+
+[Watchdog 사용 시 (leaseTime 생략)]
+t=0:  결제 서버 A, 주문 42번 락 획득, Watchdog 활성
+t=3:  Full GC 시작 → JVM + Watchdog 전체 정지
+t=10: Watchdog이 갱신 못함 (STW 중)
+t=30: 락 TTL 만료 (Watchdog이 못 갱신했으므로)
+      → leaseTime과 동일한 시나리오 전개
+```
+
+**결론**: GC STW가 TTL보다 길면 Watchdog도 leaseTime도 도움이 되지 않는다. **DB 레벨 방어가 최종 보루다.**
+
+```java
+// DB 레벨 방어: 음수 재고 절대 불가
+@Modifying
+@Query("UPDATE Stock s SET s.quantity = s.quantity - :amount " +
+       "WHERE s.productId = :id AND s.quantity >= :amount")
+int decreaseStockSafely(@Param("id") Long id, @Param("amount") int amount);
+// 영향 행 = 0이면 재고 부족 → 비즈니스 예외 발생
+
+// G1GC/ZGC 설정으로 STW 최소화
+// JVM 옵션: -XX:+UseZGC -XX:MaxGCPauseMillis=100
+```
+
+### 시나리오 2: Redlock 클럭 드리프트 — NTP 시계 점프
+
+**상황**: 결제 서버 5대에 Redlock 적용, TTL=5초. NTP 재동기화로 노드 2개의 시계가 3초 앞으로 점프했다.
+
+```
+[정상 상황]
+t=0: 클라이언트 A → 5개 노드에 SET NX EX 5
+     → 3개 노드에서 성공, 유효 TTL = 5초 - 0.1초(왕복) = 4.9초
+
+[시계 점프 시]
+t=0: 클라이언트 A → 노드1,2,3 성공 (과반수 달성)
+t=1: 노드1,2의 시계가 3초 앞으로 점프
+     → 노드1,2 입장: t=4 (실제로는 t=1인데)
+     → 노드1,2의 TTL: 5초 - 4초 = 1초만 남은 것처럼 인식
+t=1.5: 노드1,2의 락 만료 (시계 기준)
+t=2: 클라이언트 B → 노드1,2,4 에서 성공 (과반수!)
+     → A와 B 동시에 락 보유!
+```
+
+**방어책**:
+```java
+// 1. TTL을 클럭 드리프트 허용치의 10배 이상으로 설정
+// NTP drift 허용치 = 500ms → TTL = 5000ms 이상
+
+// 2. 유효 TTL에 drift 보정값 추가
+// 유효 TTL = 초기 TTL - 경과 시간 - (노드수 * 클럭 드리프트 추정값)
+long driftFactor = 5; // ms per second
+long validityTime = lockTtl - (System.currentTimeMillis() - startTime)
+                           - (numNodes * driftFactor);
+if (validityTime <= 0) {
+    // 시간이 너무 걸렸음 → 모든 노드에서 락 해제
+    releaseAllLocks();
+    throw new LockExpiredException("유효 TTL 부족");
+}
+
+// 3. fencing token으로 stale holder 차단 (근본적 해결)
+```
+
+### 시나리오 3: 티켓팅 플래시 세일 — 10만 명 동시 접속
+
+**상황**: BTS 콘서트 티켓 100장에 10만 명 동시 접근. 각 사용자가 좌석 선점(5초) 후 결제해야 한다.
+
+```java
+@Service
+@RequiredArgsConstructor
+public class TicketingService {
+
+    private final RedissonClient redissonClient;
+    private final StringRedisTemplate redisTemplate;
+    private final TicketRepository ticketRepository;
+
+    // 10만 명이 동시에 호출 — Pub/Sub으로 스핀락 없이 대기
+    public ReservationResult reserveSeat(Long seatId, Long userId) {
+        RLock lock = redissonClient.getLock("seat:lock:" + seatId);
+
+        try {
+            // waitTime=0: 즉시 실패 (다른 사용자가 선점 중이면 바로 포기)
+            // leaseTime=5초: 결제 완료 시간 제한
+            boolean acquired = lock.tryLock(0, 5, TimeUnit.SECONDS);
+            if (!acquired) {
+                return ReservationResult.ALREADY_TAKEN; // 다른 사용자 선점 중
+            }
+
+            // 재고 확인 (락 안에서)
+            if (!ticketRepository.isAvailable(seatId)) {
+                lock.unlock();
+                return ReservationResult.SOLD_OUT;
+            }
+
+            // 5초 후 결제 미완료 시 TTL 만료로 자동 반환
+            redisTemplate.opsForValue().set(
+                "seat:reserve:" + seatId, userId.toString(), 5, TimeUnit.SECONDS
+            );
+            return ReservationResult.success(seatId, userId);
+
+        } catch (InterruptedException e) {
+            Thread.currentThread().interrupt();
+            return ReservationResult.ERROR;
+        }
+        // finally에서 unlock하지 않음 — 5초간 선점 유지
+    }
+
+    // 결제 완료 시 선점 → 확정
+    @Transactional
+    public void confirmPayment(Long seatId, Long userId) {
+        RLock lock = redissonClient.getLock("seat:lock:" + seatId);
+
+        // 선점한 사용자만 확정 가능
+        String reservedUser = redisTemplate.opsForValue().get("seat:reserve:" + seatId);
+        if (!userId.toString().equals(reservedUser)) {
+            throw new ReservationExpiredException("선점이 만료됐거나 다른 사용자의 좌석");
+        }
+
+        try {
+            ticketRepository.confirm(seatId, userId); // DB에 확정 저장
+        } finally {
+            redisTemplate.delete("seat:reserve:" + seatId);
+            if (lock.isHeldByCurrentThread()) {
+                lock.unlock(); // 선점 락 해제 → 다른 사용자 진입 가능
+            }
+        }
+    }
+}
+```
+
+**성능 수치**: Redisson Pub/Sub 방식에서 10만 명 동시 대기 → 락 해제 시 즉시 알림 수신, Redis 명령 추가 발생 없음. 스핀락이었다면 100ms 폴링으로 초당 100만 건 Redis 명령 발생.
+
+### 시나리오 4: Redis 마스터 장애 + 락 유실 + 이중 결제
+
+**상황**: 결제 서버 락 획득 직후 Redis 마스터 장애. Sentinel이 레플리카를 승격. 이중 결제 발생.
+
+```
+t=0:  결제 서버 A, payment:lock:order-777 획득 (마스터에 저장)
+t=0.1: 마스터 → 레플리카 복제 시작 (비동기, 아직 미완료)
+t=0.2: 마스터 장애!
+t=1:  Sentinel, 레플리카를 마스터로 승격 (payment:lock:order-777 없음)
+t=2:  결제 서버 B, 새 마스터에서 payment:lock:order-777 SET NX → 성공!
+t=3:  A와 B 모두 order-777 결제 처리 → 이중 결제
+```
+
+**다층 방어 코드**:
+
+```java
+@Service
+@RequiredArgsConstructor
+public class PaymentService {
+
+    private final RedissonClient redissonClient; // Redlock 5노드 구성
+    private final PaymentRepository paymentRepository;
+
+    @Transactional
+    public PaymentResult processPayment(String orderId, BigDecimal amount) {
+        // 1층: Redlock (5개 독립 노드 과반수)
+        RLock redLock = buildRedLock(orderId);
+
+        try {
+            if (!redLock.tryLock(10, 30, TimeUnit.SECONDS)) {
+                throw new PaymentInProgressException(orderId);
+            }
+
+            // 2층: 멱등성 체크 (DB UNIQUE 제약)
+            // 이미 처리된 주문인지 확인
+            Optional<Payment> existing = paymentRepository.findByOrderId(orderId);
+            if (existing.isPresent()) {
+                return existing.get().toResult(); // 중복 요청 → 기존 결과 반환
+            }
+
+            // 3층: 결제 처리 + DB UNIQUE(order_id) 제약
+            Payment payment = Payment.builder()
+                .orderId(orderId)
+                .amount(amount)
+                .idempotencyKey(UUID.randomUUID().toString())
+                .build();
+
+            try {
+                return paymentRepository.save(payment).toResult();
+            } catch (DataIntegrityViolationException e) {
+                // UNIQUE 위반 → 동시 요청이 먼저 처리됨
+                return paymentRepository.findByOrderId(orderId)
+                    .map(Payment::toResult)
+                    .orElseThrow(() -> new PaymentException("결제 상태 불일치"));
+            }
+
+        } catch (InterruptedException e) {
+            Thread.currentThread().interrupt();
+            throw new PaymentException(e);
+        } finally {
+            if (redLock.isHeldByCurrentThread()) {
+                redLock.unlock();
+            }
+        }
+    }
+}
+```
+
+---
+
+## 14. 전체 선택 가이드
+
+```mermaid
+graph LR
+    Q{"서버 수?"} -->|단일| S["synchronized"]
+    Q -->|멀티| Q2{"작업 복잡도?"}
+    Q2 -->|단순NX| L["RedisTemplate"]
+    Q2 -->|복잡/재진입| R["Redisson RLock"]
+    R -->|마스터장애허용X| RL["Redlock 5노드"]
+```
+
+| 상황 | 선택 | 이유 |
 |------|------|------|
-| 1. 분산 락 | 동시 요청 직렬화 (성능) | Redis `tryLock(3, 10, SECONDS)` |
-| 2. DB 비관적 락 | 크리티컬 구간 보호 | `SELECT FOR UPDATE` |
-| 3. WHERE 방어 | 음수/초과 방지 | `WHERE quantity >= :amount` |
-| 4. UNIQUE 제약 | 이중 처리 방지 (멱등성) | `UNIQUE(idempotency_key)` |
+| 단일 JVM | `synchronized` / `ReentrantLock` | 오버헤드 없음 |
+| 멀티 인스턴스, 단순 lock/unlock | `RedisTemplate SET NX EX` + Lua 해제 | 의존성 최소 |
+| 멀티 인스턴스, 재진입/공정성/RW | `Redisson RLock` | 검증된 구현체 |
+| 마스터 장애 허용 불가 (결제 등) | `Redisson RedLock` (5노드) | 과반수 합의 |
+| 완전한 강일관성 필요 | `ZooKeeper` / `etcd` | Raft 합의 알고리즘 |
 
-```
-분산 락이 깨져도 → DB 비관적 락이 막고
-DB 비관적 락이 깨져도 → WHERE 조건이 막고  
-WHERE 조건을 우회해도 → UNIQUE 제약이 막는다
-```
+---
 
-> **락은 성능 최적화일 뿐, 정합성의 최종 보장은 DB가 한다.** Watchdog에 의존하지 마라. leaseTime을 명시하고, DB에 최종 방어선을 걸어라. 이 원칙을 지키면 Redis가 죽든, GC가 30초 멈추든, 마스터가 장애를 일으키든 데이터는 안전하다.
+## 15. 분산 락 설계 체크리스트
+
+| 항목 | 이유 |
+|------|------|
+| TTL 반드시 설정 | 보유자 크래시 시 자동 해제 — 없으면 영구 데드락 |
+| UUID 값 + Lua 해제 | GET-비교-DEL 원자성 — 타인 락 오삭제 방지 |
+| leaseTime vs Watchdog 의식적 선택 | 작업 시간 예측 가능 여부로 결정 |
+| try-finally로 unlock 보장 | 예외 시에도 반드시 해제 |
+| DB 레벨 최종 방어선 | WHERE, UNIQUE, @Version — 락이 깨져도 정합성 보장 |
+| Fencing Token | GC STW, 네트워크 지연으로 인한 stale holder 차단 |
+| 재시도 타임아웃 | 무한 대기 방지 |
+| 멱등성 보장 | 락 실패 후 재시도 시 중복 처리 방지 |
+
+---
+
+## 정리
+
+분산 락은 간단해 보이지만 극한 상황에서 반드시 깨진다. 핵심 원칙 여섯 가지를 기억한다.
+
+1. `SET NX EX`는 원자적이고 `SETNX` + `EXPIRE`는 원자적이지 않다 — 이것이 모든 구현의 출발점이다
+2. Lua 스크립트는 Redis 이벤트 루프의 단일 스레드 특성을 이용해 여러 명령을 원자적으로 묶는다
+3. Watchdog의 1/3 주기 갱신은 네트워크 일시 장애 2회를 허용하는 설계적 선택이다
+4. Redlock의 N/2+1 과반수는 두 클라이언트가 동시에 과반수를 달성하는 것을 수학적으로 불가능하게 만든다
+5. Fencing Token은 분산 락의 시간 의존성을 토큰의 순서 의존성으로 대체하여 stale holder를 DB 레벨에서 차단한다
+6. 어떤 분산 락도 완벽하지 않다 — 락은 성능 최적화(동시 요청 직렬화)이고, 데이터 정합성의 최종 보장은 DB가 담당한다
